pull translations from crowdin

--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -19,8 +19,8 @@
   "editMenuPaste": "Indsæt",
   "editMenuPasteAndMatchStyle": "Indsæt og tilpas format",
   "editMenuDelete": "Slet",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Slet kontakt",
+  "editMenuDeleteGroup": "Slet gruppe",
   "editMenuSelectAll": "Vælg alle",
   "windowMenuClose": "Luk vindue",
   "windowMenuMinimize": "Minimér",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Du blev fjernet fra gruppen.",
   "unreadMessage": "Ulæst besked",
   "unreadMessages": "Ulæste beskeder",
-  "debugLogExplanation": "Denne log vil blive lagt offentligt online for udvikleres brug. Du kan undersøge og redigere den før du sender.",
-  "debugLogError": "Noget gik galt under upload! Venligst overvej manuelt at tilføje din log til den fejlrapport, du sender.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Rapporter en fejl",
   "gotIt": "Forstået",
   "submit": "Send",
@@ -73,9 +72,9 @@
   "offline": "Offline",
   "checkNetworkConnection": "Kontroller din netværksforbindelse.",
   "attemptingReconnection": "Forsøger at genoprette forbindelse på $reconnect_duration_in_seconds$ sekunder",
-  "submitDebugLog": "Debug log",
+  "submitDebugLog": "Fejlretningslog",
   "debugLog": "Debug log",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Vis Fejlsøgningslog",
   "goToReleaseNotes": "Gå til udgivelsesnoter",
   "goToSupportPage": "Gå til supportsiden",
   "menuReportIssue": "Indmeld en fejl",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Søg",
   "noSearchResults": "Ingen resultater for \"$searchTerm$\"",
-  "conversationsHeader": "Samtaler",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontakter",
   "messagesHeader": "Beskeder",
   "settingsHeader": "Indstillinger",
@@ -93,7 +92,7 @@
   "contactAvatarAlt": "Avatar for kontakt $name$",
   "downloadAttachment": "Hent vedhæftet fil",
   "replyToMessage": "Svar på besked",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "Svar til:",
   "originalMessageNotFound": "Original besked ikke fundet",
   "originalMessageNotAvailable": "Original besked er ikke længere tilgængelig",
   "messageFoundButNotLoaded": "Original besked fundet, men ikke indlæst. Rul op for at indlæse den.",
@@ -105,14 +104,14 @@
   "video": "Video",
   "photo": "Billede",
   "cannotUpdate": "Kan ikke opdatere",
-  "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
+  "cannotUpdateDetail": "Session Desktop kunne ikke opdateres, men der er en ny version tilgængelig. Gå til https://getsession.org/ og installer den nye version manuelt, og derefter enten kontakte support eller indsende en fejl om dette problem.",
   "ok": "Ok",
   "cancel": "Afbryd",
   "close": "Luk",
   "continue": "Fortsæt",
   "error": "Fejl",
   "delete": "Slet",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
+  "messageDeletionForbidden": "Du har ikke tilladelse til at slette andres beskeder",
   "deleteJustForMe": "Slet - kun for mig",
   "deleteForEveryone": "Slet for alle",
   "deleteMessagesQuestion": "Slet disse beskeder?",
@@ -131,7 +130,7 @@
   "deleteConversationConfirmation": "Slet samtale permanent?",
   "clearAllData": "Slet alle data",
   "deleteAccountWarning": "Alle dine beskeder og kontakter slettes.",
-  "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
+  "deleteContactConfirmation": "Er du sikker på, at du vil slette denne samtale?",
   "quoteThumbnailAlt": "Miniatur af billede fra citeret besked",
   "imageAttachmentAlt": "Billede vedhæftet til beskeden",
   "videoAttachmentAlt": "Skærmbillede af video knyttet til beskeden",
@@ -157,11 +156,11 @@
   "spellCheckDescription": "Aktiver stavekontrol af beskeder",
   "spellCheckDirty": "Du skal genstarte Session før dine nye indstillinger virker",
   "notifications": "Meddelelser",
-  "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
-  "readReceiptSettingTitle": "Read Receipts",
-  "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
-  "typingIndicatorsSettingTitle": "Typing Indicators",
-  "zoomFactorSettingTitle": "Zoom Factor",
+  "readReceiptSettingDescription": "Se og del når beskeder er blevet læst (gør det muligt at læse kvitteringer i alle Sessions).",
+  "readReceiptSettingTitle": "Kvitteringer for læsning",
+  "typingIndicatorsSettingDescription": "Se og del når beskeder bliver skrevet (gælder for alle Session).",
+  "typingIndicatorsSettingTitle": "Skrive indikator",
+  "zoomFactorSettingTitle": "Zoomfaktor",
   "notificationSettingsDialog": "Når beskeder ankommer, vis meddelelser med:",
   "disableNotifications": "Slå meddelelser fra",
   "nameAndMessage": "Både navn og besked",
@@ -210,60 +209,60 @@
   "timerOption_1_minute_abbreviated": "1m",
   "timerOption_5_minutes_abbreviated": "5m",
   "timerOption_30_minutes_abbreviated": "30m",
-  "timerOption_1_hour_abbreviated": "1h",
-  "timerOption_6_hours_abbreviated": "6h",
-  "timerOption_12_hours_abbreviated": "12h",
+  "timerOption_1_hour_abbreviated": "1t",
+  "timerOption_6_hours_abbreviated": "6t",
+  "timerOption_12_hours_abbreviated": "12t",
   "timerOption_1_day_abbreviated": "1d",
-  "timerOption_1_week_abbreviated": "1w",
+  "timerOption_1_week_abbreviated": "1u",
   "disappearingMessagesDisabled": "Forsvindende beskeder slået fra",
   "disabledDisappearingMessages": "$name$ slog forsvindende beskeder fra",
   "youDisabledDisappearingMessages": "Du slog forsvindende beskeder fra",
   "timerSetTo": "Timer sat til $time$",
   "noteToSelf": "Note til dig selv",
-  "hideMenuBarTitle": "Hide Menu Bar",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "hideMenuBarTitle": "Skjul Menulinje",
+  "hideMenuBarDescription": "Slå synlighed for systemmenulinjen til/fra",
   "startConversation": "Start ny samtale...",
   "invalidNumberError": "Ugyldigt nummer",
-  "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
-  "autoUpdateSettingTitle": "Auto Update",
+  "failedResolveOns": "Kunne ikke finde ONS navn",
+  "successUnlinked": "Din enhed blev afkoblet",
+  "autoUpdateSettingTitle": "Auto Opdatér",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Sessionopdatering tilgængelig",
   "autoUpdateNewVersionMessage": "Der er en ny version af Session tilgængelig.",
   "autoUpdateNewVersionInstructions": "Genstart Session for at anvende opdateringerne.",
   "autoUpdateRestartButtonLabel": "Genstart Session",
   "autoUpdateLaterButtonLabel": "Senere",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateDownloadButtonLabel": "Hent",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "Ønsker du at downloade opdateringen nu?",
   "leftTheGroup": "$name$ forlod gruppen",
   "multipleLeftTheGroup": "$name$ forlod gruppen",
   "updatedTheGroup": "Gruppe opdateret",
   "titleIsNow": "Titel er nu '$name$'",
   "joinedTheGroup": "$name$ tilsluttede sig gruppen",
   "multipleJoinedTheGroup": "$names$ tilsluttede sig gruppen",
-  "kickedFromTheGroup": "$name$ was removed from the group.",
-  "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
-  "unblockUser": "Unblock",
-  "unblocked": "Unblocked",
-  "blocked": "Blocked",
-  "blockedSettingsTitle": "Blocked contacts",
-  "unbanUser": "Unban User",
+  "kickedFromTheGroup": "$name$ blev fjernet fra gruppen.",
+  "multipleKickedFromTheGroup": "$name$ er blevet fjernet fra gruppen.",
+  "blockUser": "Blokér",
+  "unblockUser": "Fjern blokering",
+  "unblocked": "Afblokeret",
+  "blocked": "Blokeret",
+  "blockedSettingsTitle": "Blokerede kontakter",
+  "unbanUser": "Afvis Bruger",
   "unbanUserConfirm": "Are you sure you want to unban user?",
-  "userUnbanned": "User unbanned successfully",
-  "userUnbanFailed": "Unban failed!",
-  "banUser": "Ban User",
-  "banUserAndDeleteAll": "Ban and Delete All",
+  "userUnbanned": "Bruger afblokeret med succes",
+  "userUnbanFailed": "Afvisning mislykkedes!",
+  "banUser": "Udeluk bruger",
+  "banUserAndDeleteAll": "Bandlys og slet alle",
   "userBanned": "User banned successfully",
-  "userBanFailed": "Ban failed!",
+  "userBanFailed": "Bandlys mislykkedes!",
   "leaveGroup": "Forlad gruppe",
-  "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
-  "leaveGroupConfirmation": "Are you sure you want to leave this group?",
-  "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
-  "cannotRemoveCreatorFromGroup": "Cannot remove this user",
-  "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "noContactsForGroup": "You don't have any contacts yet",
+  "leaveAndRemoveForEveryone": "Forlad gruppe og fjern for alle",
+  "leaveGroupConfirmation": "Er du sikker, du vil forlade gruppen?",
+  "leaveGroupConfirmationAdmin": "Da du er administrator for denne gruppe, vil den blive fjernet for alle nuværende medlemmer. Er du sikker på, at du vil forlade denne gruppe?",
+  "cannotRemoveCreatorFromGroup": "Kan ikke slette denne bruger",
+  "cannotRemoveCreatorFromGroupDesc": "Du kan ikke fjerne denne bruger, da de er ophavsmanden af gruppen.",
+  "noContactsForGroup": "Du har ingen kontakter endnu",
   "failedToAddAsModerator": "Failed to add user as moderator",
   "failedToRemoveFromModerator": "Fjernelse af bruger fra moderator liste er fejlet",
   "copyMessage": "Kopier besked tekst",
@@ -329,34 +328,34 @@
   "add": "Add",
   "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
-  "noMembersInThisGroup": "No other members in this group",
-  "noModeratorsToRemove": "no moderators to remove",
-  "onlyAdminCanRemoveMembers": "You are not the creator",
-  "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
+  "noMembersInThisGroup": "Ingen andre medlemmer i denne gruppe",
+  "noModeratorsToRemove": "ingen moderatorer at fjerne",
+  "onlyAdminCanRemoveMembers": "Du er ikke skaberen",
+  "onlyAdminCanRemoveMembersDesc": "Kun opretteren af gruppen kan fjerne brugere",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
-  "yourUniqueSessionID": "Say hello to your Session ID",
-  "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
-  "getStarted": "Get started",
-  "createSessionID": "Create Session ID",
-  "recoveryPhrase": "Recovery Phrase",
-  "enterRecoveryPhrase": "Enter your recovery phrase",
-  "displayName": "Display Name",
-  "anonymous": "Anonymous",
-  "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
-  "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
-  "continueYourSession": "Continue Your Session",
-  "linkDevice": "Link Device",
-  "restoreUsingRecoveryPhrase": "Restore your account",
-  "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
-  "beginYourSession": "Begin your Session.",
-  "welcomeToYourSession": "Welcome to your Session",
-  "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "signIn": "Log ind",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "yourUniqueSessionID": "Sig hej til dit Session ID",
+  "allUsersAreRandomly...": "Dit Session ID er den unikke adresse, som folk kan bruge til at kontakte dig i Session. Dit Session ID har ingen tilknytning til din rigtige identitet og er helt anonymt og privat.",
+  "getStarted": "Kom i gang",
+  "createSessionID": "Opret Session ID",
+  "recoveryPhrase": "Gendannelsesssætning",
+  "enterRecoveryPhrase": "Angiv din genoprettelsessætning",
+  "displayName": "Visningsnavn",
+  "anonymous": "Anonym",
+  "removeResidueMembers": "Ved at klikke ok vil også fjerne disse medlemmer da de forlod gruppen.",
+  "enterDisplayName": "Tast et visningsnavn",
+  "enterOptionalPassword": "Adgangskode (valgfrit)",
+  "continueYourSession": "Fortsæt din Session",
+  "linkDevice": "Sammenkæd enhed",
+  "restoreUsingRecoveryPhrase": "Gendan din konto",
+  "or": "eller",
+  "ByUsingThisService...": "Ved at bruge denne tjeneste accepterer du vores <a href=\"https://getsession.org/legal/#tos\">Servicevilkår</a> og <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privatlivspolitik</a>",
+  "beginYourSession": "Begynd din Session.",
+  "welcomeToYourSession": "Velkommen til Session",
+  "newSession": "Ny Session",
+  "searchFor...": "Søg efter samtaler eller kontakter",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
