--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "You were removed from the group.",
   "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
-  "debugLogExplanation": "This log will be posted publicly online for contributors to view. You may examine and edit it before submitting.",
-  "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Report an issue",
   "gotIt": "Got it",
   "submit": "Submit",
