--- a/_locales/es_419/messages.json
+++ b/_locales/es_419/messages.json
@@ -1,52 +1,51 @@
 {
   "privacyPolicy": "Términos y Política de Privacidad",
-  "copyErrorAndQuit": "Copy error and quit",
+  "copyErrorAndQuit": "Copiar error y salir",
   "unknown": "Desconocido",
-  "databaseError": "Database Error",
-  "mainMenuFile": "&File",
-  "mainMenuEdit": "&Edit",
-  "mainMenuView": "&View",
-  "mainMenuWindow": "&Window",
-  "mainMenuHelp": "&Help",
-  "appMenuHide": "Hide",
-  "appMenuHideOthers": "Hide Others",
-  "appMenuUnhide": "Show All",
-  "appMenuQuit": "Quit Session",
+  "databaseError": "Fallo en la base de datos",
+  "mainMenuFile": "&Archivo",
+  "mainMenuEdit": "&Editar",
+  "mainMenuView": "&Vista",
+  "mainMenuWindow": "&Ventana",
+  "mainMenuHelp": "&Ayuda",
+  "appMenuHide": "Ocultar",
+  "appMenuHideOthers": "Ocultar otros",
+  "appMenuUnhide": "Mostrar todo",
+  "appMenuQuit": "Cerrar sesión",
   "editMenuUndo": "Deshacer",
-  "editMenuRedo": "Redo",
+  "editMenuRedo": "Rehacer",
   "editMenuCut": "Cortar",
   "editMenuCopy": "Copiar",
   "editMenuPaste": "Pegar",
-  "editMenuPasteAndMatchStyle": "Paste and Match Style",
-  "editMenuDelete": "Delete",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuPasteAndMatchStyle": "Pegar y coincidir estilo",
+  "editMenuDelete": "Eliminar",
+  "editMenuDeleteContact": "Eliminar contacto",
+  "editMenuDeleteGroup": "Eliminar grupo",
   "editMenuSelectAll": "Seleccionar todo",
-  "windowMenuClose": "Close Window",
-  "windowMenuMinimize": "Minimize",
+  "windowMenuClose": "Cerrar ventana",
+  "windowMenuMinimize": "Minimizar",
   "windowMenuZoom": "Zoom",
-  "windowMenuBringAllToFront": "Bring All to Front",
-  "viewMenuResetZoom": "Actual Size",
-  "viewMenuZoomIn": "Zoom In",
-  "viewMenuZoomOut": "Zoom Out",
-  "viewMenuToggleFullScreen": "Toggle Full Screen",
-  "viewMenuToggleDevTools": "Toggle Developer Tools",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "windowMenuBringAllToFront": "Traer todo al frente",
+  "viewMenuResetZoom": "Tamaño original",
+  "viewMenuZoomIn": "Ampliar",
+  "viewMenuZoomOut": "Reducir",
+  "viewMenuToggleFullScreen": "Activar pantalla completa",
+  "viewMenuToggleDevTools": "Activar herramientas de desarrollador",
+  "contextMenuNoSuggestions": "Sin sugerencias",
+  "openGroupInvitation": "Abrir invitación de grupo",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "¿Unirse a $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "¿Estás seguro de que quieres unirte al grupo público $roomName$?",
+  "enterSessionIDOrONSName": "Introduzca el ID de Session o el nombre ONS",
   "loading": "Cargando...",
-  "optimizingApplication": "Optimizing application...",
-  "done": "Done",
-  "me": "Me",
-  "view": "View",
-  "youLeftTheGroup": "You have left the group.",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "optimizingApplication": "Optimizando la aplicación...",
+  "done": "Hecho",
+  "me": "Yo",
+  "view": "Ver",
+  "youLeftTheGroup": "Has abandonado el grupo.",
+  "youGotKickedFromGroup": "Has sido eliminado del grupo.",
+  "unreadMessage": "Mensaje no leído",
+  "unreadMessages": "Mensajes No Leídos",
   "debugLogExplanation": "This log will be saved to your desktop.",
-  "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "Report an issue",
   "gotIt": "Got it",
   "submit": "Submit",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Search",
   "noSearchResults": "No results found for \"$searchTerm$\"",
-  "conversationsHeader": "Conversations",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contacts",
   "messagesHeader": "Messages",
   "settingsHeader": "Ajustes",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
