--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "شما از گروه حذف شدید.",
   "unreadMessage": "پیام خوانده نشده",
   "unreadMessages": "پیام های خوانده نشده",
-  "debugLogExplanation": "این گزارش برای بازنگری آنلاین ذخیره می‌شود. شما می‌توانید قبل از ارسال لینک، گزارش را بررسی و ویرایش کنید.",
-  "debugLogError": "خطایی با آپلود رخ داد! لطفا به صورت دستی لاگ را به باگی که میخواهید ثبت کنید بیافزایید.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "گزارش مشکل",
   "gotIt": "فهمیدم!",
   "submit": "ارسال",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "جستجو",
   "noSearchResults": "No results for \"$searchTerm$\"",
-  "conversationsHeader": "مکالمه ها",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "مخاطبین",
   "messagesHeader": "پیام ها",
   "settingsHeader": "تنظیمات",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "فقط موسس گروه میتواند کاربران را حذف کند",
   "createAccount": "Create Account",
   "signIn": "ثبت نام",
-  "startInTrayTitle": "باز کردن در حالت Tray",
-  "startInTrayDescription": "باز کردن Session به عنوان یک اپ فشرده شده ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "به شناسه‌ی Session خود سلام کنید",
   "allUsersAreRandomly...": "شناسه‌ی Session شما آدرس منحصر به فردی است که افراد می‌توانند از طریق آن با شما در Session تماس بگیرند. شناسه‌ی Session شما، بدون هیچ ارتباطی با هویت واقعی شما، کاملاً ناشناس و خصوصی است.",
   "getStarted": "شروع به کار کنید",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "تماس",
   "startedACall": "تماس شما با $name$",
-  "answeredACall": "تماس با $name$"
+  "answeredACall": "تماس با $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
