--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -4,9 +4,9 @@
   "unknown": "Inconnu",
   "databaseError": "Erreur de base de données",
   "mainMenuFile": "&Fichier",
-  "mainMenuEdit": "Édition",
+  "mainMenuEdit": "&Éditer",
   "mainMenuView": "&Voir",
-  "mainMenuWindow": "Fenêtre",
+  "mainMenuWindow": "&Fenêtre",
   "mainMenuHelp": "&Aide",
   "appMenuHide": "Cacher",
   "appMenuHideOthers": "Cacher les autres",
@@ -19,8 +19,8 @@
   "editMenuPaste": "Coller",
   "editMenuPasteAndMatchStyle": "Coller et faire correspondre le style",
   "editMenuDelete": "Supprimer",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Supprimer le contact",
+  "editMenuDeleteGroup": "Supprimer le groupe",
   "editMenuSelectAll": "Tout sélectionner",
   "windowMenuClose": "Fermer la fenêtre",
   "windowMenuMinimize": "Réduire",
@@ -32,7 +32,7 @@
   "viewMenuToggleFullScreen": "Activer/désactiver le plein écran",
   "viewMenuToggleDevTools": "Afficher/cacher les outils pour développeurs",
   "contextMenuNoSuggestions": "Pas de suggestions",
-  "openGroupInvitation": "Invitation de groupe public",
+  "openGroupInvitation": "Invitation à un groupe public",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Rejoindre $roomName$ ?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Êtes-vous sûr de vouloir rejoindre le groupe public $roomName$ ?",
   "enterSessionIDOrONSName": "Entrer un Session ID ou un nom ONS",
@@ -40,13 +40,12 @@
   "optimizingApplication": "Optimisation de l’application…",
   "done": "Terminer",
   "me": "Moi",
-  "view": "Voir",
-  "youLeftTheGroup": "Vous avez quitté le groupe",
+  "view": "Afficher",
+  "youLeftTheGroup": "Vous avez quitté le groupe.",
   "youGotKickedFromGroup": "Vous avez été retiré du groupe.",
   "unreadMessage": "Message non lu",
   "unreadMessages": "Messages non lus",
-  "debugLogExplanation": "Ce journal sera publié en ligne publiquement pour être consulté par les contributeurs. Vous pouvez l’examiner et l’éditer avant de l’envoyer.",
-  "debugLogError": "Un problème est survenu lors du téléversement ! Veuillez envisager d’ajouter manuellement votre journal à votre rapport de bogue.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Signaler un problème",
   "gotIt": "D’accord",
   "submit": "Envoyer",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Recherche",
   "noSearchResults": "Aucun résultat n’a été trouvé pour « %s »",
-  "conversationsHeader": "Conversations",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contacts",
   "messagesHeader": "Messages",
   "settingsHeader": "Paramètres",
@@ -181,7 +180,7 @@
   "timestamp_h": "1 heure",
   "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Entrez un corps de message.",
-  "unblockToSend": "Débloquez ce contact pour envoyer un message",
+  "unblockToSend": "Débloquez ce contact pour envoyer un message.",
   "unblockGroupToSend": "Débloquer ce groupe pour envoyer un message.",
   "youChangedTheTimer": "Vous avez défini l’expiration des messages éphémères à $time$.",
   "timerSetOnSync": "L’expiration des messages éphémères est maintenant à $time$",
@@ -234,7 +233,7 @@
   "autoUpdateRestartButtonLabel": "Redémarrer Session",
   "autoUpdateLaterButtonLabel": "Plus tard",
   "autoUpdateDownloadButtonLabel": "Télécharger",
-  "autoUpdateDownloadedMessage": "La mise à jour a été telechargée.",
+  "autoUpdateDownloadedMessage": "La mise à jour a été téléchargée.",
   "autoUpdateDownloadInstructions": "Voulez-vous télécharger la mise à jour ?",
   "leftTheGroup": "$name$ a quitté le groupe.",
   "multipleLeftTheGroup": "$name$ ont quitté le groupe",
@@ -250,7 +249,7 @@
   "blocked": "Bloqué",
   "blockedSettingsTitle": "Contacts bloqués",
   "unbanUser": "Débannir l'utilisateur",
-  "unbanUserConfirm": "Êtes-vous sûr de vouloir débannir cet utilisateur ?",
+  "unbanUserConfirm": "Êtes-vous sûr de vouloir dé-bannir cet utilisateur ?",
   "userUnbanned": "Utilisateur débanni avec succès",
   "userUnbanFailed": "Le débannissement a échoué !",
   "banUser": "Bannir l'utilisateur",
@@ -283,7 +282,7 @@
   "confirmPassword": "Confirmez le mot de passe",
   "pasteLongPasswordToastTitle": "Le contenu du presse-papier dépasse la longueur maximum pour un mot de passe ($max_pwd_len$ caractères).",
   "showRecoveryPhrasePasswordRequest": "Veuillez saisir votre mot de passe",
-  "recoveryPhraseSavePromptMain": "Votre phrase de récupération est la clé principale de votre Session ID - vous pouvez l'utiliser pour restaurer votre Session ID si vous perdez l'accès à votre appareil. Conservez la dans un endroit sûr et ne la donnez à personne.",
+  "recoveryPhraseSavePromptMain": "Votre phrase de récupération est la clé principale de votre Session ID — vous pouvez l'utiliser pour restaurer votre Session ID si vous perdez l'accès à votre appareil. Conservez la dans un endroit sûr et ne la donnez à personne.",
   "invalidOpenGroupUrl": "URL non valide",
   "copiedToClipboard": "Copié dans le presse-papier",
   "passwordViewTitle": "Saisissez votre mot de passe",
@@ -299,11 +298,11 @@
   "noGivenPassword": "Merci de saisir votre mot de passe",
   "passwordsDoNotMatch": "Les mots de passe ne correspondent pas.",
   "setPasswordInvalid": "Les mots de passe ne correspondent pas.",
-  "changePasswordInvalid": "L'ancien mot de passe est incorrect",
+  "changePasswordInvalid": "L'ancien mot de passe entré est incorrect",
   "removePasswordInvalid": "Mot de passe incorrect",
   "setPasswordTitle": "Définir un mot de passe",
-  "changePasswordTitle": "Changer le mot de passe",
-  "removePasswordTitle": "Supprimer le mot de passe",
+  "changePasswordTitle": "Mot de passe changé",
+  "removePasswordTitle": "Mot de passe supprimé",
   "setPasswordToastDescription": "Votre mot de passe a été défini. Veuillez le conserver en sécurité.",
   "changePasswordToastDescription": "Votre mot de passe a été changé. Veuillez le conserver en sécurité.",
   "removePasswordToastDescription": "Vous avez supprimé votre mot de passe.",
@@ -327,7 +326,7 @@
   "addAsModerator": "Ajouter Comme Modérateur",
   "removeFromModerators": "Supprimer Des Modérateurs",
   "add": "Ajouter",
-  "addingContacts": "Ajouter des contacts à",
+  "addingContacts": "Ajouter des contacts à $name$",
   "noContactsToAdd": "Aucun contact à ajouter",
   "noMembersInThisGroup": "Aucun autre membre dans ce groupe",
   "noModeratorsToRemove": "Aucun modérateur à supprimer",
@@ -335,15 +334,15 @@
   "onlyAdminCanRemoveMembersDesc": "Seul le créateur du groupe peut supprimer des utilisateurs",
   "createAccount": "Créer un compte",
   "signIn": "Connexion",
-  "startInTrayTitle": "Commencer dans la zone de notification",
-  "startInTrayDescription": "Démarrer Session en tant qu'application minifiée ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Dites bonjour à votre Session ID",
   "allUsersAreRandomly...": "Votre Session ID est l'identifiant unique que les gens utilisent pour vous contacter dans Session. Sans lien avec votre identité réelle, votre Session ID est complètement anonyme et privé.",
   "getStarted": "Commencer",
   "createSessionID": "Créer un Session ID",
   "recoveryPhrase": "Phrase de récupération",
   "enterRecoveryPhrase": "Saisissez votre phrase de récupération",
-  "displayName": "Nom affiché",
+  "displayName": "Afficher le nom",
   "anonymous": "Anonyme",
   "removeResidueMembers": "Cliquer sur ok supprimera également ces membres puisqu'ils ont quitté le groupe.",
   "enterDisplayName": "Saisissez un nom d'utilisateur",
@@ -457,10 +456,13 @@
   "noAudioOutputFound": "Aucune sortie audio trouvée",
   "callMediaPermissionsTitle": "Appels audio et vidéo",
   "callMissedCausePermission": "Appel manqué de '$name$' car vous devez activer la permission 'Appels vocaux et vidéo' dans les paramètres de confidentialité.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Appel manqué de '$name$' car vous n'avez pas encore approuvé cette conversation. Envoyez-lui un message d'abord.",
   "callMediaPermissionsDescription": "Autorise l'accès à accepter les appels vocaux et vidéo d'autres utilisateurs",
   "callMediaPermissionsDialogContent": "La mise en œuvre actuelle des appels vocaux/vidéo exposera votre adresse IP aux serveurs de la Fondation Oxen et aux utilisateurs appelés.",
   "menuCall": "Appeler",
   "startedACall": "Vous avez appelé $name$",
-  "answeredACall": "Appel avec $name$"
+  "answeredACall": "Appel avec $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
