--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -19,8 +19,8 @@
   "editMenuPaste": "Beillesztés",
   "editMenuPasteAndMatchStyle": "Beillesztés és formázás egyesítése",
   "editMenuDelete": "Törlés",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Névjegy törlése",
+  "editMenuDeleteGroup": "Csoport törlése",
   "editMenuSelectAll": "Összes kijelölése",
   "windowMenuClose": "Ablak bezárása",
   "windowMenuMinimize": "Minimalizálás",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Ön ki lett dobva ebből a csoportból.",
   "unreadMessage": "Olvasatlan Üzenet",
   "unreadMessages": "Olvasatlan Üzenetek",
-  "debugLogExplanation": "Ez a naplófájl nyilvánosan elérhető lesz az interneten annak érdekében, hogy a fejlesztők megtekinthessék. A tartalmát feltöltés előtt ellenőrizheted és szabadon szerkesztheted.",
-  "debugLogError": "Valamiért nem sikerült a feltöltés! Kérjük vedd fontolóra a naplófájl kézi feltöltését a hiba bejelentése során.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Hiba bejelentése",
   "gotIt": "Rendben!",
   "submit": "Küldés",
@@ -75,7 +74,7 @@
   "attemptingReconnection": "Újracsatlakozási kísérlet $reconnect_duration_in_seconds$ másodperc múlva",
   "submitDebugLog": "Fejlesztői naplófájl",
   "debugLog": "Fejlesztői napló",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Debug log mutatása",
   "goToReleaseNotes": "Release notes megnyitása",
   "goToSupportPage": "Támogatás megnyitása",
   "menuReportIssue": "Hiba bejelentése",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Keresés",
   "noSearchResults": "Nincs találat a \"$searchTerm$\" keresőkifejezése",
-  "conversationsHeader": "Beszélgetések",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Névjegyek",
   "messagesHeader": "Üzenetek",
   "settingsHeader": "Beállítások",
@@ -113,13 +112,13 @@
   "error": "Hiba",
   "delete": "Törlés",
   "messageDeletionForbidden": "Nincs joga mások üzeneteit törölni",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
+  "deleteJustForMe": "Törlés csak nálam",
+  "deleteForEveryone": "Törlés mindenkinél",
   "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessageQuestion": "Törli ezt az üzenetet?",
   "deleteMessages": "Üzenetek törlése",
   "deleted": "Törölve",
-  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeletedPlaceholder": "Az üzenete törölve",
   "from": "Feladó",
   "to": "címzett",
   "sent": "Elküldve",
@@ -130,7 +129,7 @@
   "resend": "Újraküldés",
   "deleteConversationConfirmation": "Véglegesen törlöd ezt a beszélgetést?",
   "clearAllData": "Az összes adat törlése",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Ez végleg törölni fogja üzeneteit, beszélgetéseit és ismerőseit.",
   "deleteContactConfirmation": "Biztosan törölni szeretné ezt a beszélgetést?",
   "quoteThumbnailAlt": "Az idézett üzenetben megjelenített fotó előnézeti képe",
   "imageAttachmentAlt": "Üzenethez csatolt kép",
@@ -151,8 +150,8 @@
   "linkPreviewsTitle": "Hivatkozások előnézeti képének küldése",
   "linkPreviewDescription": "Az előnézetek a legtöbb linknél támogatottak",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "Mikrofon",
+  "mediaPermissionsDescription": "Mikrofon hozzáférés engedélyezése",
   "spellCheckTitle": "Helyesírás ellenőrzése",
   "spellCheckDescription": "Az üzenetíró dobozba gépelt szöveg helyesírás-ellenőrzésének engedélyezése",
   "spellCheckDirty": "Újra kell indítanod a Session-t a beállítások érvényesítéséhez",
@@ -303,15 +302,15 @@
   "removePasswordInvalid": "Hibás jelszó",
   "setPasswordTitle": "Jelszó beállítása",
   "changePasswordTitle": "A jelszó módosult",
-  "removePasswordTitle": "Removed Password",
+  "removePasswordTitle": "A jelszó eltávolításra került",
   "setPasswordToastDescription": "A jelszó megváltozott. Tartsd biztonságos helyen!",
   "changePasswordToastDescription": "A jelszó megváltozott. Tartsd biztonságos helyen!",
   "removePasswordToastDescription": "Eltávolítottad a jelszavadat.",
-  "publicChatExists": "You are already connected to this open group",
+  "publicChatExists": "Már csatlakozva vagy ehhez a csoporthoz",
   "connectToServerFail": "Nem sikerült csatlakozni a csoporthoz",
   "connectingToServer": "Csatlakozás...",
   "connectToServerSuccess": "Sikeresen csatlakoztál egy nyitott csoporthoz",
-  "setPasswordFail": "Failed to set password",
+  "setPasswordFail": "Jelszó frissítése sikertelen",
   "passwordLengthError": "A jelszónak minimum 6 és maximum 64 karakter hosszúságúnak kell lennie",
   "passwordTypeError": "A jelszónak betűkből kell állnia",
   "passwordCharacterError": "A jelszó csak betűket, számokat, és szimbólumokat tartalmazhat",
@@ -328,15 +327,15 @@
   "removeFromModerators": "Eltávolítás a moderátorok listájáról",
   "add": "Hozzáadás",
   "addingContacts": "Adding contacts to $name$",
-  "noContactsToAdd": "No contacts to add",
-  "noMembersInThisGroup": "No other members in this group",
+  "noContactsToAdd": "Nincs hozzáadható névjegy",
+  "noMembersInThisGroup": "Ennek a csoportnak nincsenek tagjai",
   "noModeratorsToRemove": "no moderators to remove",
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Bejelentkezés",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Ismerd meg a Session ID-d",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Kezdjünk bele",
@@ -428,39 +427,42 @@
   "entireAccount": "Teljes fiók",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
   "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "iAmSure": "Biztos vagyok",
   "recoveryPhraseSecureTitle": "Már majdnem kész vagy!",
   "recoveryPhraseRevealMessage": "Biztosítsd fiókod a helyreállítási kulcsod elmentésével. Fedd fel a kulcsod, majd biztonságosan tedd el.",
   "recoveryPhraseRevealButtonText": "Helyreállító kódmondat felfedése",
   "notificationSubtitle": "Értesítések - $setting$",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "surveyTitle": "Töltsd ki a Session kérdőívet",
+  "goToOurSurvey": "Ugrás a kérdőívre",
+  "blockAll": "Az összes letiltása",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
   "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "incomingCallFrom": "Bejövő hívás '$name$'",
+  "ringing": "Csöngetés...",
+  "establishingConnection": "Kapcsolat készítése...",
+  "accept": "Fogadás",
+  "decline": "Elutasít",
+  "endCall": "Hívás befejezése",
+  "cameraPermissionNeededTitle": "Hang/videó hívás engedély szükséges",
+  "cameraPermissionNeeded": "Engedélyezni tudod a 'Hang és videó hívásokat' a Biztonsági beállításokban.",
+  "unableToCall": "Előbb tedd le a meglévő hívásod",
+  "unableToCallTitle": "Nem indítható el a hívás",
+  "callMissed": "Nem fogadott hívás tőle: $name$",
+  "callMissedTitle": "Nem fogadott hívás",
+  "noCameraFound": "Kamera nem található",
+  "noAudioInputFound": "Nem található audio bemenet",
+  "noAudioOutputFound": "Nem található audio kimenet",
+  "callMediaPermissionsTitle": "Hang és videó hívások",
+  "callMissedCausePermission": "Nem fogadott hívás '$name$' -től, mert előbb engedélyezned kell a 'Hang és videó hívásokat' a Biztonsági beállításokban.",
+  "callMissedNotApproved": "Nem fogadott hívás '$name$' -tól mert még nem engedélyezted a beszélgetéseteket. Írj valamit neki előbb.",
+  "callMediaPermissionsDescription": "Engedélyezz hozzáférést ahhoz, hogy fogadhass hang és videó hívásokat másoktól",
+  "callMediaPermissionsDialogContent": "A mostani megoldás a hang/videó hívásoknak megmutatja az IP címed az Oxen Foundation szervereknek és a másik félnek a hívásban.",
+  "menuCall": "Hívás",
+  "startedACall": "Felhívtad $name$",
+  "answeredACall": "Hívás $name$ -al",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
