--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Anda dikeluarkan dari grup.",
   "unreadMessage": "Pesan Belum Terbaca",
   "unreadMessages": "Pesan Belum Terbaca",
-  "debugLogExplanation": "Catatan ini akan diunggah secara publik agar kontributor dapat melihat. Anda dapat memeriksa kembali dan menyunting sebelum mengunggahnya.",
-  "debugLogError": "Terjadi kesalahan ketika mengunggah! Harap perhatikan manual menambahkan catatan bug dalam file Anda. ",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Laporkan masalah",
   "gotIt": "Paham",
   "submit": "Kirim",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Cari",
   "noSearchResults": "Tidak ditemukan hasil untuk \"$searchTerm$\"",
-  "conversationsHeader": "Percakapan",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontak",
   "messagesHeader": "Pesan",
   "settingsHeader": "Pengaturan",
@@ -96,7 +95,7 @@
   "replyingToMessage": "Membalas ke:",
   "originalMessageNotFound": "Pesan asli tidak ditemukan.",
   "originalMessageNotAvailable": "Pesan asli tidak lagi tersedia",
-  "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
+  "messageFoundButNotLoaded": "Pesan asli ditemukan, tapi tidak dapat dimuat. Gulir ke atas untuk memuatnya.",
   "recording": "Merekam",
   "you": "Anda",
   "audioPermissionNeededTitle": "Microphone access required",
@@ -142,14 +141,14 @@
   "copySessionID": "Salin Session ID",
   "copyOpenGroupURL": "Salin URL grup",
   "save": "Simpan",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Simpan log ke dekstop",
   "saved": "Tersimpan",
   "permissions": "Perizinan",
   "general": "Umum",
   "tookAScreenshot": "$name$ mengambil tangkapan layar",
   "savedTheFile": "Media disimpan oleh $name$",
   "linkPreviewsTitle": "Kirim pratinjau tautan",
-  "linkPreviewDescription": "Previews are supported for most urls",
+  "linkPreviewDescription": "Pratinjau didukung untuk sebagian besar url",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
   "mediaPermissionsDescription": "Allow access to microphone",
@@ -157,9 +156,9 @@
   "spellCheckDescription": "Aktifkan pengecek ejaan dalam kotak pesan",
   "spellCheckDirty": "Anda harus muat ulang Session untuk terima pengaturan baru anda",
   "notifications": "Pemberitahuan",
-  "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
+  "readReceiptSettingDescription": "Lihat dan bagikan saat pesan telah dibaca (mengaktifkan tanda terima telah dibaca di semua sesi).",
   "readReceiptSettingTitle": "Pesan terbaca",
-  "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
+  "typingIndicatorsSettingDescription": "Lihat dan bagikan saat pesan sedang diketik (berlaku untuk semua sesi).",
   "typingIndicatorsSettingTitle": "Indikator penulisan",
   "zoomFactorSettingTitle": "Zoom Factor",
   "notificationSettingsDialog": "Saat pesan sampai, tampilkan pemberitahuan yang menampilkan:",
@@ -221,7 +220,7 @@
   "timerSetTo": "Waktu pesan hilang diatur ke $time$",
   "noteToSelf": "Catatan Pribadi",
   "hideMenuBarTitle": "Sembunyikan Meny Bar",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "hideMenuBarDescription": "Alihkan visibilitas bilah menu sistem",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Nomor salah",
   "failedResolveOns": "Failed to resolve ONS name",
@@ -249,10 +248,10 @@
   "unblocked": "Unblocked",
   "blocked": "Blocked",
   "blockedSettingsTitle": "Kontak yang diblokir",
-  "unbanUser": "Unban User",
+  "unbanUser": "Hapus cekal pengguna",
   "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
-  "userUnbanFailed": "Unban failed!",
+  "userUnbanFailed": "Hapus cekal gagal!",
   "banUser": "Ban User",
   "banUserAndDeleteAll": "Ban and Delete All",
   "userBanned": "User banned successfully",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Ucapkan halo pada Session ID anda",
   "allUsersAreRandomly...": "Session ID adalah alamat unik yang bisa digunakan untuk mengontak anda. Tanpa koneksi dengan identitas asli, Session ID anda didesain bersifat anonim dan rahasia.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
