--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Sei stato rimosso da questo gruppo.",
   "unreadMessage": "Messaggio non letto",
   "unreadMessages": "Messaggi non letti",
-  "debugLogExplanation": "Questo log sarà reso pubblico per essere controllato dai contributori. Prima d'inviarlo esaminalo bene e modificalo. ",
-  "debugLogError": "Qualcosa è andato storto con il caricamento! Ti preghiamo di aggiungere manualmente il tuo log al bug che hai registrato.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Segnala un problema",
   "gotIt": "Capito",
   "submit": "Invia",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Cerca",
   "noSearchResults": "Nessun risultato trovato per \"$searchTerm$\"",
-  "conversationsHeader": "Conversazioni",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contatti",
   "messagesHeader": "Messaggi",
   "settingsHeader": "Impostazioni",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Solo il creatore del gruppo può rimuovere gli utenti",
   "createAccount": "Create Account",
   "signIn": "Accedi",
-  "startInTrayTitle": "Avvia nel Pannello",
-  "startInTrayDescription": "Avvia Session come app minimizzata ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Ecco la tua Sessione ID",
   "allUsersAreRandomly...": "La Sessione ID è l'indirizzo univoco che le persone possono utilizzare per contattarti su una Sessione. Senza alcuna connessione con la tua vera identità, la Sessione ID è totalmente anonimo e privato fin dal incezione.",
   "getStarted": "Inizia qui",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "L'attuale implementazione di chiamate vocali/video esporrà il tuo indirizzo IP ai server Oxen Foundation e all'utente chiamante/chiamato.",
   "menuCall": "Chiamata",
   "startedACall": "Hai chiamato $name$",
-  "answeredACall": "Chiamata con $name$"
+  "answeredACall": "Chiamata con $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
