--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -1,5 +1,5 @@
 {
-  "privacyPolicy": "privacybeleid",
+  "privacyPolicy": "Privacybeleid",
   "copyErrorAndQuit": "Foutmelding kopiëren en afsluiten",
   "unknown": "Onbekend",
   "databaseError": "Databasefout",
@@ -19,8 +19,8 @@
   "editMenuPaste": "Plakken",
   "editMenuPasteAndMatchStyle": "Plakken en stijl overnemen",
   "editMenuDelete": "Wissen",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Contact Verwijderen",
+  "editMenuDeleteGroup": "Verwijder Groep",
   "editMenuSelectAll": "Alles selecteren",
   "windowMenuClose": "Venster sluiten",
   "windowMenuMinimize": "Minimaliseren",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Je bent verwijderd van de groep.",
   "unreadMessage": "Ongelezen bericht",
   "unreadMessages": "Ongelezen berichten",
-  "debugLogExplanation": "Deze log zal online publiek beschikbaar gemaakt worden voor de ontwikkelaars. Controleer en wijzig deze zo nodig voor het verzenden.",
-  "debugLogError": "Er is iets misgegaan bij het uploaden. Voeg het logbestand handmatig toe aan het foutrapport.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Meld een probleem",
   "gotIt": "Begrepen!",
   "submit": "Verzenden",
@@ -75,7 +74,7 @@
   "attemptingReconnection": "Poging tot opnieuw verbinden over $reconnect_duration_in_seconds$ seconden",
   "submitDebugLog": "Foutopsporingslogboek",
   "debugLog": "Foutopsporingslogboek",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Toon Debug Log",
   "goToReleaseNotes": "Ga naar uitgaveopmerkingen",
   "goToSupportPage": "Ga naar ondersteuningspagina",
   "menuReportIssue": "Meld een probleem",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Sessie",
   "search": "Zoeken",
   "noSearchResults": "Geen resultaten voor ‘$searchTerm$’",
-  "conversationsHeader": "Gesprekken",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contacten",
   "messagesHeader": "Berichten",
   "settingsHeader": "Instellingen",
@@ -114,9 +113,9 @@
   "delete": "Wissen",
   "messageDeletionForbidden": "Je hebt geen toestemming om andermans berichten te verwijderen",
   "deleteJustForMe": "Verwijder alleen voor mij",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteForEveryone": "Verwijder voor iedereen",
+  "deleteMessagesQuestion": "Verwijder die berichten?",
+  "deleteMessageQuestion": "Dit bericht verwijderen?",
   "deleteMessages": "Berichten wissen",
   "deleted": "Verwijderd",
   "messageDeletedPlaceholder": "Dit bericht is verwijderd",
@@ -142,7 +141,7 @@
   "copySessionID": "Sessie-ID kopiëren",
   "copyOpenGroupURL": "Kopiëer groep URL",
   "save": "Opslaan",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Logboek naar bureaublad opslaan",
   "saved": "Opgeslagen",
   "permissions": "Toestemmingen",
   "general": "Algemeen",
@@ -151,8 +150,8 @@
   "linkPreviewsTitle": "Verstuur Link-voorbeelden",
   "linkPreviewDescription": "Voorvertoningen worden ondersteund voor de meeste urls",
   "linkPreviewsConfirmMessage": "Je hebt geen volledige bescherming van metadata bij het verzenden van link-voorbeelden.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "Microfoon",
+  "mediaPermissionsDescription": "Sta toegang tot de microfoon toe",
   "spellCheckTitle": "Spellingcontrole",
   "spellCheckDescription": "Gebruik spellingscontrole voor de tekst in het berichtinvoerveld",
   "spellCheckDirty": "Je moet Session opnieuw starten, om uw nieuwe instellingen toe te passen",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Alleen de maker van de groep kan gebruikers verwijderen",
   "createAccount": "Create Account",
   "signIn": "Aanmelden",
-  "startInTrayTitle": "Start in taakbalk",
-  "startInTrayDescription": "Start Session als een miniatuur app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Zeg hallo tegen jou Session-ID",
   "allUsersAreRandomly...": "Jou Session-ID is het unieke adres dat mensen kunnen gebruiken om contact met u op te nemen op Session. Ontworpen zonder verbinding met je echte identiteit, is jou Session-ID volledig anoniem en privé.",
   "getStarted": "Aan de slag",
@@ -415,7 +414,7 @@
   "unpinConversation": "Gesprek losmaken",
   "pinConversationLimitTitle": "Limiet vastgezette gesprekken",
   "pinConversationLimitToastDescription": "Je kan alleen $number$ gesprekken vastzetten",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "Toon gebruikers informatie",
   "latestUnreadIsAbove": "Eerste ongelezen bericht staat boven",
   "sendRecoveryPhraseTitle": "Herstelzin verzenden",
   "sendRecoveryPhraseMessage": "Je probeert uw herstel zin te versturen welke kan worden gebruikt om toegang te krijgen tot jou account. Weet je zeker dat je dit bericht wilt versturen?",
@@ -435,32 +434,35 @@
   "notificationSubtitle": "Meldingen - $setting$",
   "surveyTitle": "Neem deel aan onze Session enquête",
   "goToOurSurvey": "Ga naar onze enquête",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
+  "blockAll": "Blokkeer Alles",
+  "messageRequests": "Berichtverzoeken",
+  "requestsSubtitle": "Lopende verzoeken",
+  "requestsPlaceholder": "Geen verzoeken",
+  "messageRequestsDescription": "Berichtaanvraag inbox inschakelen",
+  "incomingCallFrom": "Inkomende oproep van $name$'",
+  "ringing": "Gaat over...",
+  "establishingConnection": "Verbinding maken...",
   "accept": "Aanvaarden",
   "decline": "Afwijzen",
   "endCall": "Gesprek beëindigen",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Oproep machtigingen vereist",
+  "cameraPermissionNeeded": "U kunt de machtiging 'Spraak- en video-oproepen' inschakelen in de privacy-instellingen.",
+  "unableToCall": "Annuleer eerst je lopende oproep",
   "unableToCallTitle": "Kan geen nieuw gesprek starten",
   "callMissed": "Gemiste oproep van $name$",
   "callMissedTitle": "Oproep gemist",
   "noCameraFound": "Geen camera gevonden",
   "noAudioInputFound": "Geen audio-invoer gevonden",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "noAudioOutputFound": "Geen audio-invoer gevonden",
+  "callMediaPermissionsTitle": "Spraak- en video-oproepen",
+  "callMissedCausePermission": "Oproep gemist van '$name$' omdat je de 'Spraak- en video-oproep' permissie nodig hebt in de privacy-instellingen.",
+  "callMissedNotApproved": "Oproep gemist van '$name$' omdat je dit gesprek nog niet hebt goedgekeurd. Stuur hem eerst een bericht.",
+  "callMediaPermissionsDescription": "Sta toegang toe tot het accepteren van spraak- en video-oproepen van andere gebruikers",
+  "callMediaPermissionsDialogContent": "De huidige implementatie van spraak / video-oproepen zal uw IP-adres blootstellen aan de Oxen Foundation servers en de bel/gebelde gebruiker.",
+  "menuCall": "Bellen",
+  "startedACall": "Je belde $name$",
+  "answeredACall": "Bel met $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
