--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -19,8 +19,8 @@
   "editMenuPaste": "Wklej",
   "editMenuPasteAndMatchStyle": "Wklej i dopasuj styl",
   "editMenuDelete": "Usuń",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Usuń kontakt",
+  "editMenuDeleteGroup": "Usuń grupę",
   "editMenuSelectAll": "Zaznacz wszystko",
   "windowMenuClose": "Zamknij okno",
   "windowMenuMinimize": "Minimalizuj",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Usunięto cię z grupy.",
   "unreadMessage": "Nieprzeczytana wiadomość",
   "unreadMessages": "Nieprzeczytane wiadomości",
-  "debugLogExplanation": "Ten log zostanie publicznie opublikowany autorom aplikacji. Możesz go przejrzeć i edytować przed wysłaniem.",
-  "debugLogError": "Coś poszło nie tak podczas przesyłania! Rozważ ręczne dodanie swojego logu do zgłoszonego błędu.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Zgłoś problem",
   "gotIt": "Rozumiem",
   "submit": "Wyślij",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Szukaj",
   "noSearchResults": "Brak wyników dla \"$searchTerm$\"",
-  "conversationsHeader": "Rozmowy",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontakty",
   "messagesHeader": "Wiadomości",
   "settingsHeader": "Ustawienia",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Tylko twórca grupy może usunąć użytkowników",
   "createAccount": "Create Account",
   "signIn": "Zaloguj się",
-  "startInTrayTitle": "Rozpocznij w zasobniku",
-  "startInTrayDescription": "Uruchom Session jako zminimalizowaną aplikację ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Przywitaj się z identyfikatorem Session",
   "allUsersAreRandomly...": "Twój identyfikator Session to unikalny adres, za pomocą którego można się z Tobą kontaktować w Sesji. Bez połączenia z twoją prawdziwą tożsamością, identyfikator Session jest z założenia całkowicie anonimowy i prywatny.",
   "getStarted": "Rozpocznij",
@@ -457,10 +456,13 @@
   "noAudioOutputFound": "Nie znaleziono wyjścia dźwięku",
   "callMediaPermissionsTitle": "Połączenia głosowe i wideo",
   "callMissedCausePermission": "Połączenie nieodebrane od '$name$' ponieważ musisz włączyć uprawnienie 'Połączenia głosowe i wideo' w Ustawieniach Prywatności.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Połączenie nieodebrane od '$name$' ponieważ nie zatwierdziłeś/aś jeszcze tej rozmowy. Najpierw wyślij do niego wiadomość.",
   "callMediaPermissionsDescription": "Zezwala na dostęp do przyjmowania połączeń głosowych i wideo od innych użytkowników",
   "callMediaPermissionsDialogContent": "Obecna implementacja połączeń głosowych/wideo wyświetli Twój adres IP na serwerach Fundacji Oxen i użytkownikowi do którego dzwonisz/dzwoni.",
   "menuCall": "Zadzwoń",
   "startedACall": "Zadzwoniłeś/aś do $name$",
-  "answeredACall": "Połączenie z $name$"
+  "answeredACall": "Połączenie z $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
