--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -19,8 +19,8 @@
   "editMenuPaste": "Вставить",
   "editMenuPasteAndMatchStyle": "Вставить с соответствием стилю",
   "editMenuDelete": "Удалить",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Удалить контакт",
+  "editMenuDeleteGroup": "Удалить группу",
   "editMenuSelectAll": "Выбрать все",
   "windowMenuClose": "Закрыть окно",
   "windowMenuMinimize": "Свернуть",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Вы были удалены из группы.",
   "unreadMessage": "Непрочитанное сообщение",
   "unreadMessages": "Непрочитанные сообщения",
-  "debugLogExplanation": "Этот журнал отладки будет открыто опубликован для разработчиков. Вы можете проверить и изменить его перед отправкой.",
-  "debugLogError": "Что-то пошло не так с загрузкой! Пожалуйста, подумайте о том, чтобы вручную добавить журнал к вашей ошибке.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Сообщить о проблеме",
   "gotIt": "Понятно",
   "submit": "Отправить",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Поиск",
   "noSearchResults": "Результаты не найдены для \"$searchTerm$\"",
-  "conversationsHeader": "Беседы",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Контакты",
   "messagesHeader": "Сообщения",
   "settingsHeader": "Настройки",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Только создатель группы может удалять пользователей",
   "createAccount": "Создать аккаунт",
   "signIn": "Войти",
-  "startInTrayTitle": "Запускать в трее",
-  "startInTrayDescription": "Запускать Sessions как свернутое приложение ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Познакомьтесь со своим Session ID",
   "allUsersAreRandomly...": "Ваш Session ID - это уникальный адрес, который другие пользователи могут использовать для связи с вами при помощи Session. Поскольку ваш Session ID никак не связан с вашей настоящей личностью, он по определению является полностью анонимным и конфиденциальным.",
   "getStarted": "Начать",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "Текущая реализация голосовых/видеозвонков предоставит ваш IP-адрес серверам Oxen Foundation и вызывающему/вызываемому пользователю.",
   "menuCall": "Вызов",
   "startedACall": "Вы звоните $name$",
-  "answeredACall": "Звонок с $name$"
+  "answeredACall": "Звонок с $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
