--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -1,5 +1,5 @@
 {
-  "privacyPolicy": "Podmienky a Zásady Ochrany Osobných Údajov",
+  "privacyPolicy": "Podmienky & Zásady ochrany osobných údajov",
   "copyErrorAndQuit": "Kopírovať a ukončiť",
   "unknown": "Neznáme",
   "databaseError": "Chyba databázy",
@@ -19,8 +19,8 @@
   "editMenuPaste": "Vložiť",
   "editMenuPasteAndMatchStyle": "Vložiť a prispôsobiť štýl",
   "editMenuDelete": "Vymazať",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Vymazať kontakt",
+  "editMenuDeleteGroup": "Vymazať skupinu",
   "editMenuSelectAll": "Vybrať všetko",
   "windowMenuClose": "Zatvoriť okno",
   "windowMenuMinimize": "Minimalizovať",
@@ -32,21 +32,20 @@
   "viewMenuToggleFullScreen": "Celá obrazovka",
   "viewMenuToggleDevTools": "Nástroje pre vývojárov",
   "contextMenuNoSuggestions": "Žiadne Návrhy",
-  "openGroupInvitation": "Otvoriť skupinovú pozvánku",
+  "openGroupInvitation": "Pozvánka do otvorenej skupiny",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Pripojiť sa do $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Ste si istí, že sa chcete pripojiť do otvorenej skupiny $roomName$?",
   "enterSessionIDOrONSName": "Zadajte Session ID alebo ONS meno",
   "loading": "Nahrávanie...",
   "optimizingApplication": "Optimalizovanie aplikácie...",
-  "done": "Dokončené",
+  "done": "Hotovo",
   "me": "Ja",
   "view": "Zobraziť",
   "youLeftTheGroup": "Opustili ste skupinu",
   "youGotKickedFromGroup": "Boli ste odstránení zo skupiny.",
   "unreadMessage": "Neprečítaná Správa",
   "unreadMessages": "Neprečítané Správy",
-  "debugLogExplanation": "Tento záznam bude verejne sprístupnený k prehliadaniu pre prispievateľov. Pred odoslaním si ho môžete skontrolovať a upraviť.",
-  "debugLogError": "Pri nahrávaní sa stala chyba! Prosím, zvážte manuálne pridanie logu do hlásenia o chybe.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Nahlásiť problém",
   "gotIt": "Rozumiem!",
   "submit": "Odoslať",
@@ -75,7 +74,7 @@
   "attemptingReconnection": "Pokus o znovupripojenie za $reconnect_duration_in_seconds$ sekúnd",
   "submitDebugLog": "Ladiaci log",
   "debugLog": "Ladiaci Log",
-  "showDebugLog": "Zobraziť Ladiaci Log",
+  "showDebugLog": "Zobraziť debug log",
   "goToReleaseNotes": "Navštíviť Poznámky k Vydaniu",
   "goToSupportPage": "Navštíviť Stránku Podpory",
   "menuReportIssue": "Nahlásiť Problém",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Hľadať",
   "noSearchResults": "Žiadne výsledky pre \"$searchTerm$\"",
-  "conversationsHeader": "Konverzácie",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontakty",
   "messagesHeader": "Správy",
   "settingsHeader": "Nastavenia",
@@ -104,7 +103,7 @@
   "audio": "Zvuk",
   "video": "Video",
   "photo": "Fotka",
-  "cannotUpdate": "Nemožno Aktualizovať",
+  "cannotUpdate": "Nemožno aktualizovať",
   "cannotUpdateDetail": "Nepodarilo sa aktualizovať Session, avšak je dostupná nová verzia. Prosím, choďte na https://getsession.org/ a nainštalujte novú verziu manuálne, potom buď kontaktujte podporu alebo podajte chybové hlásenie o tomto probléme.",
   "ok": "OK",
   "cancel": "Zrušiť",
@@ -140,7 +139,7 @@
   "addACaption": "Pridaj popis...",
   "copy": "Kopírovať",
   "copySessionID": "Kopírovať Session ID",
-  "copyOpenGroupURL": "Kopírovať URL Skupiny",
+  "copyOpenGroupURL": "Kopírovať URL skupiny",
   "save": "Uložiť",
   "saveLogToDesktop": "Uložiť log na pracovnú plochu",
   "saved": "Uložené",
@@ -148,7 +147,7 @@
   "general": "Všeobecné",
   "tookAScreenshot": "$name$ odfotil obrazovku",
   "savedTheFile": "$name$ uložil médiá",
-  "linkPreviewsTitle": "Posielať Náhľady Odkazov",
+  "linkPreviewsTitle": "Posielať náhľady odkazov",
   "linkPreviewDescription": "Náhľady sú podporované pre väčšinu adries",
   "linkPreviewsConfirmMessage": "Nebudeťe mať plnú ochranu pred metadátami pri posielaní náhľadov na odkazy.",
   "mediaPermissionsTitle": "Mikrofón",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Iba tvorca skupiny môže odstrániť používateľov",
   "createAccount": "Create Account",
   "signIn": "Prihlásiť Sa",
-  "startInTrayTitle": "Začať na Lište",
-  "startInTrayDescription": "Spustiť Session minimalizovanú ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Povedz ahoj tvojmu Session ID",
   "allUsersAreRandomly...": "Tvoj Session ID je unikátna adresa ľudia môžu používať aby Vás kontaktovali cez Session. Zo žiadným spojením ku vašej reálnej identite, Váš Session ID je úplne anonymný a súkromný.",
   "getStarted": "Začať",
@@ -457,10 +456,13 @@
   "noAudioOutputFound": "Nebol nájdeny zvukový výstup",
   "callMediaPermissionsTitle": "Hlasové a video hovory",
   "callMissedCausePermission": "Zmeškaný hovor od '$name$' pretože potrebujete zapnúť povolenie 'Hlasové a video hovory' v Nastaveniach Súkromia.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Zmeškaný hovor od '$name$', keďže ste túto konverzáciu ešte neschválili. Pošlite mu najprv správu.",
   "callMediaPermissionsDescription": "Povoliť prístup na príjmanie hlasových a video hovorov od ostatných používateľov",
   "callMediaPermissionsDialogContent": "Súčasná implementácia hlasových/video hovorov odhalí vašu IP adresu serverom Oxen Foundation a volajúcemu/volanému používateľovi.",
   "menuCall": "Hovor",
   "startedACall": "Volali ste $name$",
-  "answeredACall": "Volať z $name$"
+  "answeredACall": "Volať z $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
