--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -1,7 +1,7 @@
 {
   "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "Kopiraj napako in zapusti aplikacijo",
-  "unknown": "Unknown",
+  "unknown": "Neznano",
   "databaseError": "Napaka v bazi podatkov",
   "mainMenuFile": "&Datoteka",
   "mainMenuEdit": "&Urejanje",
@@ -19,8 +19,8 @@
   "editMenuPaste": "Prilepi",
   "editMenuPasteAndMatchStyle": "Prilepi in spoji oblikovanje",
   "editMenuDelete": "Izbriši",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Izbriši stik",
+  "editMenuDeleteGroup": "Izbriši skupino",
   "editMenuSelectAll": "Izberi vse",
   "windowMenuClose": "Zapri okno",
   "windowMenuMinimize": "Pomanjšaj",
@@ -31,26 +31,25 @@
   "viewMenuZoomOut": "Oddalji",
   "viewMenuToggleFullScreen": "Celozaslonski način",
   "viewMenuToggleDevTools": "Vklopi razvijalska orodja",
-  "contextMenuNoSuggestions": "No Suggestions",
+  "contextMenuNoSuggestions": "Ni predlogov",
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Nalagam ...",
   "optimizingApplication": "Optimiziranje nastavitev ...",
-  "done": "Done",
+  "done": "Končano",
   "me": "Jaz",
   "view": "Preglej",
   "youLeftTheGroup": "Zapustili ste skupino",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
-  "debugLogExplanation": "Ta sistemska zabeležba bo javno objavljena na spletu za razvijalce aplikacije. Pred objavo jo lahko pregledate.",
-  "debugLogError": "Prišlo je do težav pri prenosu! Morda bi želeli priložiti sistemsko zabeležbo prijavi hrošča razvijalcem.",
+  "unreadMessage": "Neprebrano sporočilo",
+  "unreadMessages": "Neprebrana sporočila",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Prijava napake",
   "gotIt": "Razumem!",
   "submit": "Objavi",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Označi vse kot prebrano",
   "incomingError": "Napaka pri obdelavi dohodnega sporočila",
   "media": "Medijske datoteke",
   "mediaEmptyState": "V tem pogovoru ni nobene medijske datoteke",
@@ -79,25 +78,25 @@
   "goToReleaseNotes": "Opombe k izdaji",
   "goToSupportPage": "Podporna stran",
   "menuReportIssue": "Prijava napake",
-  "about": "About",
+  "about": "O programu",
   "speech": "Nagovor",
   "show": "Prikaži",
   "sessionMessenger": "Session",
   "search": "Iskanje",
   "noSearchResults": "Ni rezultata za \"$searchTerm$\"",
-  "conversationsHeader": "Pogovori",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Stiki",
   "messagesHeader": "Sporočila",
-  "settingsHeader": "Settings",
+  "settingsHeader": "Nastavitve",
   "typingAlt": "Animacija tipkanja za ta pogovor",
   "contactAvatarAlt": "Avatar uporabnika $name$",
   "downloadAttachment": "Prenesi priponko",
   "replyToMessage": "Odgovor na sporočilo",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "Odgovori:",
   "originalMessageNotFound": "Izvorno sporočilo ni bilo najdeno",
   "originalMessageNotAvailable": "Izvorno sporočilo ni več na voljo",
   "messageFoundButNotLoaded": "Izvorno sporočilo je bilo najdeno, vendar še ni naloženo. Če ga želite naložiti, se pomaknite navzgor.",
-  "recording": "Recording",
+  "recording": "Snemanje",
   "you": "Vi",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Za pošiljanje glasovnih sporočil potrebuje aplikacija Session Desktop dostop do vašega mikrofona.",
@@ -106,44 +105,44 @@
   "photo": "Slika",
   "cannotUpdate": "Cannot Update",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
-  "ok": "OK",
+  "ok": "V redu",
   "cancel": "Prekliči",
-  "close": "Close",
+  "close": "Zapri",
   "continue": "Continue",
   "error": "Napaka",
   "delete": "Izbriši",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteJustForMe": "Izbriši le zame",
+  "deleteForEveryone": "Izbriši za vse",
+  "deleteMessagesQuestion": "Izbriši ta sporočila?",
+  "deleteMessageQuestion": "Izbriši to sporočilo?",
   "deleteMessages": "Izbriši sporočila",
   "deleted": "Deleted",
-  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeletedPlaceholder": "To sporočilo je bilo izbrisano",
   "from": "Pošiljatelj",
   "to": "v",
   "sent": "Poslano",
   "received": "Prejeto",
   "sendMessage": "Pošlji sporočilo",
   "groupMembers": "Člani skupine",
-  "moreInformation": "More information",
-  "resend": "Resend",
+  "moreInformation": "Več informacij",
+  "resend": "Ponovno pošlji",
   "deleteConversationConfirmation": "Ali res želite nepovratno izbrisati ta pogovor?",
-  "clearAllData": "Clear All Data",
+  "clearAllData": "Počisti vse podatke",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
-  "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
+  "deleteContactConfirmation": "Ste prepričani, da želite trajno izbrisati pogovor?",
   "quoteThumbnailAlt": "Predogled slike citiranega sporočila",
   "imageAttachmentAlt": "Slika je priložena sporočilu",
   "videoAttachmentAlt": "Zajem slike videa je priložen k sporočilu",
   "lightboxImageAlt": "Slika je bila poslana tekom pogovora",
   "imageCaptionIconAlt": "Ikona, ki označuje, da ima ta slika besedilo",
   "addACaption": "Dodaj besedilo ...",
-  "copy": "Copy",
+  "copy": "Kopiraj",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Shrani",
   "saveLogToDesktop": "Save log to desktop",
-  "saved": "Saved",
+  "saved": "Shrani",
   "permissions": "Dovoljenja",
   "general": "Splošno",
   "tookAScreenshot": "$name$ took a screenshot",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
