--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Izbačeni ste iz grupe.",
   "unreadMessage": "Nepročitana poruka",
   "unreadMessages": "Nepročitane poruke",
-  "debugLogExplanation": "Ovaj izveštaj će biti javno objavljen kako bi ga saradnici mogli videti. Možete ga pregledati i urediti pre slanja.",
-  "debugLogError": "Nešto nije u redu sa otpremanjem! Molimo vas da razmotrite ručno dodavanje izveštaja u datoteku za greške.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Prijavite problem",
   "gotIt": "Jasno",
   "submit": "Пошаљи",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Sеsija",
   "search": "Тражи",
   "noSearchResults": "No results for \"$searchTerm$\"",
-  "conversationsHeader": "Преписке",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Контакти",
   "messagesHeader": "Поруке",
   "settingsHeader": "Podešavanja",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Samo kreator grupe može ukloniti korisnike",
   "createAccount": "Create Account",
   "signIn": "Prijava",
-  "startInTrayTitle": "Pokreni minimizovano",
-  "startInTrayDescription": "Pokrenite Session minimiziran ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Ovo je tvoj ID sesije",
   "allUsersAreRandomly...": "Vaš ID sesije je jedinstvena adresa koju ljudi mogu da koriste da vas kontaktiraju na Session-u. Bez veze sa vašim pravim identitetom, vaš ID sesije je potpuno anoniman.",
   "getStarted": "Počni",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "Trenutna implementacija glasovnog/video poziva će izložiti Vašu IP adresu, serverima Oxen Fondacije i korisniku sa kojim imate poziv.",
   "menuCall": "Poziv",
   "startedACall": "Pozvali ste $name$",
-  "answeredACall": "Poziv sa $name$"
+  "answeredACall": "Poziv sa $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
