--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -1,6 +1,6 @@
 {
   "privacyPolicy": "Điều khoản và Chính sách bảo mật",
-  "copyErrorAndQuit": "Copy error and quit",
+  "copyErrorAndQuit": "Sao chép lỗi và thoát",
   "unknown": "Không rõ",
   "databaseError": "Lỗi cơ sở dữ liệu",
   "mainMenuFile": "&File",
@@ -35,9 +35,9 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "enterSessionIDOrONSName": "Nhập Session ID hoặc tên OSN",
   "loading": "Loading...",
-  "optimizingApplication": "Optimizing application...",
+  "optimizingApplication": "Đang tối ưu hóa ứng dụng...",
   "done": "Done",
   "me": "Me",
   "view": "View",
@@ -45,13 +45,12 @@
   "youGotKickedFromGroup": "You were removed from the group.",
   "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
-  "debugLogExplanation": "Bản ghi này sẽ được đăng trực tuyến một cách công khai để những người đóng góp theo dõi. Bạn có thể kiểm tra và sửa đổi nó trước khi gửi đi.",
-  "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Báo lỗi",
   "gotIt": "Đã nhận được",
   "submit": "Nộp",
   "markAllAsRead": "Mark All as Read",
-  "incomingError": "Error handling incoming message",
+  "incomingError": "Lỗi xử lí tin nhắn mới nhận",
   "media": "Media",
   "mediaEmptyState": "You don’t have any media in this conversation",
   "documents": "Tài liệu",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Tìm kiếm",
   "noSearchResults": "No results for \"$searchTerm$\"",
-  "conversationsHeader": "Conversations",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Liên hệ",
   "messagesHeader": "Tin nhắn",
   "settingsHeader": "Cài đặt",
@@ -94,7 +93,7 @@
   "downloadAttachment": "Download Attachment",
   "replyToMessage": "Reply to Message",
   "replyingToMessage": "Replying to:",
-  "originalMessageNotFound": "Original message not found",
+  "originalMessageNotFound": "Không tìm thấy tin nhắn gốc",
   "originalMessageNotAvailable": "Original message no longer available",
   "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
   "recording": "Recording",
@@ -115,7 +114,7 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Xóa các tin nhắn đã chọn?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Xóa tin nhắn",
   "deleted": "Deleted",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Bắt đầu với Session ID của bạn",
   "allUsersAreRandomly...": "Session ID của bạn là địa chỉ duy nhất mà mọi người có thể dùng để liên lạc với bạn trên ứng dụng Session. Session ID của bạn được thiết kế đảm bảo tuyệt đối ẩn danh và riêng tư vì nó không liên kết với danh tính thật của bạn.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "Bạn đã gọi $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
