--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -19,8 +19,8 @@
   "editMenuPaste": "粘帖",
   "editMenuPasteAndMatchStyle": "粘帖并调整格式",
   "editMenuDelete": "删除",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "删除联系人",
+  "editMenuDeleteGroup": "删除群组",
   "editMenuSelectAll": "全选",
   "windowMenuClose": "关闭窗口",
   "windowMenuMinimize": "最小化",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "您已被移出群组。",
   "unreadMessage": "未读消息",
   "unreadMessages": "未读消息",
-  "debugLogExplanation": "该日志将公开发布以供参考，您可以在提交之前检查和编辑。",
-  "debugLogError": "上传出错！您可以手动将日志添加到要反馈的bug中。",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "反馈错误信息",
   "gotIt": "了解",
   "submit": "提交",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session会话",
   "search": "搜索",
   "noSearchResults": "没有找到 “$searchTerm$” 相关结果",
-  "conversationsHeader": "对话",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "联系人",
   "messagesHeader": "信息",
   "settingsHeader": "设置",
@@ -114,9 +113,9 @@
   "delete": "删除",
   "messageDeletionForbidden": "您无权删除他人的对话消息",
   "deleteJustForMe": "仅在我的设备上删除",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteForEveryone": "为所有人删除",
+  "deleteMessagesQuestion": "删除这些消息吗？",
+  "deleteMessageQuestion": "删除这条消息？",
   "deleteMessages": "删除消息",
   "deleted": "已删除",
   "messageDeletedPlaceholder": "该消息已被删除",
@@ -142,7 +141,7 @@
   "copySessionID": "复制 Session ID",
   "copyOpenGroupURL": "复制群组链接",
   "save": "保存",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "保存日志到桌面",
   "saved": "已保存",
   "permissions": "权限",
   "general": "通用",
@@ -151,8 +150,8 @@
   "linkPreviewsTitle": "发送链接预览",
   "linkPreviewDescription": "多数链接都支持预览",
   "linkPreviewsConfirmMessage": "您无法在绝对的数据安全保障前提下发送链接预览。",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "麦克风",
+  "mediaPermissionsDescription": "允许访问麦克风",
   "spellCheckTitle": "拼写检查",
   "spellCheckDescription": "启用输入框拼写检查",
   "spellCheckDirty": "您必须重新启动Session才能应用您的新设置",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "只有群组的创建者可以移除用户",
   "createAccount": "Create Account",
   "signIn": "登录",
-  "startInTrayTitle": "从托盘中启动",
-  "startInTrayDescription": "将 Session 启动为最小化应用程序 ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "向您的Session ID打个招呼吧",
   "allUsersAreRandomly...": "您的Session ID是其他用户在与您聊天时使用的独一无二的地址。Session ID与您的真实身份无关，它在设计上完全是匿名且私密的。",
   "getStarted": "开始使用",
@@ -415,7 +414,7 @@
   "unpinConversation": "取消置顶对话",
   "pinConversationLimitTitle": "置顶对话上限",
   "pinConversationLimitToastDescription": "你只能置顶 $number$ 个聊天",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "显示用户信息",
   "latestUnreadIsAbove": "第一条未读消息在上方",
   "sendRecoveryPhraseTitle": "正在发送恢复口令",
   "sendRecoveryPhraseMessage": "您正在尝试发送恢复口令，它能用来登录和访问您的账号。\n您确定要发送该消息吗？",
@@ -435,32 +434,35 @@
   "notificationSubtitle": "通知设置 - $setting$",
   "surveyTitle": "参加我们的产品问卷调研",
   "goToOurSurvey": "跳转至问卷",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
+  "blockAll": "屏蔽全部",
+  "messageRequests": "消息请求",
+  "requestsSubtitle": "待处理的请求",
+  "requestsPlaceholder": "无请求",
+  "messageRequestsDescription": "启用消息请求收件箱",
+  "incomingCallFrom": "'$name$' 来电",
   "ringing": "响铃中...",
-  "establishingConnection": "Establishing connection...",
+  "establishingConnection": "正在建立连接……",
   "accept": "接受",
   "decline": "拒绝",
   "endCall": "结束呼叫",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "需要语音/视频通话权限",
+  "cameraPermissionNeeded": "您可以在隐私设置中启用“语音和视频通话”权限。",
+  "unableToCall": "请先取消您正在进行的通话",
   "unableToCallTitle": "无法开始新通话",
   "callMissed": "来自 $name$ 的未接来电",
   "callMissedTitle": "未接来电",
   "noCameraFound": "找不到摄像头",
   "noAudioInputFound": "找不到音频输入",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "noAudioOutputFound": "找不到音频输出",
+  "callMediaPermissionsTitle": "语音和视频通话",
+  "callMissedCausePermission": "未接听 '$name$'，因为您需要在隐私设置中启用“语音和视频通话”权限。",
+  "callMissedNotApproved": "因为您尚未批准联系人'$name$'，此来电未接通。请先给对方发送一条信息。",
+  "callMediaPermissionsDescription": "允许访问以接听其他用户的语音和视频通话。",
+  "callMediaPermissionsDialogContent": "当前的语音/视频通话机制会将 IP 地址暴露给 Oxen Foundation 服务器以及与您通话的用户。",
+  "menuCall": "呼叫",
+  "startedACall": "您呼叫了 $name$",
+  "answeredACall": "与 $name$ 通话",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
