--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "تم اِلغائك من المجموعة.",
   "unreadMessage": "رسالة غير مقروءة",
   "unreadMessages": "الرسائل غير المقروءة",
-  "debugLogExplanation": "هذه السجلاّت سيتم نشرها علنا ليتمكن المساهمون من معاينتها. ربما ترغب فى تعديلها أو التحقق منها قبل إرسالها. ",
-  "debugLogError": "حدث خطأ ما في الرفع! اضف يدويا سجل الخطأ الذي تبلغه من فضلك.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "بلّغ عن مشكل",
   "gotIt": "واضح",
   "submit": "إرسال",
@@ -85,7 +84,7 @@
   "sessionMessenger": "جلسة محادثة",
   "search": "بحث",
   "noSearchResults": "No results for \"$searchTerm$\"",
-  "conversationsHeader": "المحادثات",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "جهات الإتصال",
   "messagesHeader": "الرسائل",
   "settingsHeader": "التعديلات",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "فقط منشئ المجموعة يمكنه الغاء المستخدمين",
   "createAccount": "Create Account",
   "signIn": "سَجِل الدخول",
-  "startInTrayTitle": "شَغِل في شريط النظام",
-  "startInTrayDescription": "شَغِل Session كتطبيق مصغر ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "رحب بعنوان تعريفك",
   "allUsersAreRandomly...": "عنوان تعريفك هو عنوان وحيد خاص بك, يمكن للناس الاتصال بك عن طريقه. دون معرفة هويتك الحقيقية, هذا العنوان مصمم ليكون خاص و مجهول.",
   "getStarted": "اِبدأ",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "الاستعمال الحالي لمكالمات الصوت/الفيديو سيظهر عنوانك IP لخوادم مؤسسة Oxen و للمتصل بالمستخدم.",
   "menuCall": "اتصال",
   "startedACall": "لقد قمت بالاتصال ب $name$",
-  "answeredACall": "اتصال مع $name$"
+  "answeredACall": "اتصال مع $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
