--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Бяхте премахнат от тази група",
   "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
-  "debugLogExplanation": "Этот журнал отладки будет открыто опубликован для разработчиков. Вы можете проверить и изменить его перед отправкой.",
-  "debugLogError": "Что-то пошло не так с загрузкой! Пожалуйста, подумайте о том, чтобы вручную добавить журнал к вашей ошибке.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Сообщить о проблеме",
   "gotIt": "Понятно",
   "submit": "Отправить",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Сесия",
   "search": "Поиск",
   "noSearchResults": "Результаты не найдены для \"$searchTerm$\"",
-  "conversationsHeader": "Беседы",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Контакты",
   "messagesHeader": "Сообщения",
   "settingsHeader": "Настройки",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Создать Аккаунт",
   "signIn": "Войти",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Познакомьтесь со своим Session ID",
   "allUsersAreRandomly...": "Ваш Session ID - это уникальный адрес, который другие пользователи могут использовать для связи с вами при помощи Session. Поскольку ваш Session ID никак не связан с вашей настоящей личностью, он по определению является полностью анонимным и конфиденциальным.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
