--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "T'han eliminat del grup.",
   "unreadMessage": "Missatge sense llegir",
   "unreadMessages": "Missatges sense llegir",
-  "debugLogExplanation": "Aquest registre es penjarà públicament perquè el vegin els col·laboradors. Podeu examinar-lo i editar-lo abans d'enviar-lo.",
-  "debugLogError": "S'ha produït un error amb la càrrega! Considereu afegir manualment el registre a l'error que envieu.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Informeu d'un error",
   "gotIt": "Entès!",
   "submit": "Tramet",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Cerca",
   "noSearchResults": "No hi ha cap resultat per a \"$searchTerm$\".",
-  "conversationsHeader": "Converses",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contactes",
   "messagesHeader": "Missatges",
   "settingsHeader": "Configuració",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Només el creador del grup pot eliminar usuaris",
   "createAccount": "Create Account",
   "signIn": "Iniciar sessió",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Saluda al teu Session ID",
   "allUsersAreRandomly...": "El teu Session ID és l'adreça única que els usuaris poden utilitzar per contactar-te a Session. Sense connexió amb la teva identitat real, el teu Session ID és totalment anònim i privat per disseny.",
   "getStarted": "Comencem!",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
