--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -19,8 +19,8 @@
   "editMenuPaste": "Einfügen",
   "editMenuPasteAndMatchStyle": "Unformatiert einfügen",
   "editMenuDelete": "Löschen",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Kontakt löschen",
+  "editMenuDeleteGroup": "Gruppe löschen",
   "editMenuSelectAll": "Alle Auswählen",
   "windowMenuClose": "Fenster schließen",
   "windowMenuMinimize": "Minimieren",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Du wurdest aus der Gruppe entfernt.",
   "unreadMessage": "Ungelesene Nachricht",
   "unreadMessages": "Ungelesene Nachrichten",
-  "debugLogExplanation": "Dieses Diagnoseprotokoll wird im Internet veröffentlicht, damit Mitwirkende es einsehen können. Bevor du das Protokoll übermittelst, kannst du es noch einmal überpüfen und bearbeiten.",
-  "debugLogError": "Beim Hochladen gab es ein Problem. Falls möglich, füge bitte das Protokoll manuell deiner eingereichten Problembeschreibung hinzu.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Problem melden",
   "gotIt": "Verstanden",
   "submit": "Übermitteln",
@@ -75,7 +74,7 @@
   "attemptingReconnection": "Neuer Verbindungsversuch in $reconnect_duration_in_seconds$ Sekunden",
   "submitDebugLog": "Diagnoseprotokoll",
   "debugLog": "Diagnoseprotokoll",
-  "showDebugLog": "Debug Protokoll ansehen",
+  "showDebugLog": "Debug-Protokoll ansehen",
   "goToReleaseNotes": "Versionshinweise",
   "goToSupportPage": "Support",
   "menuReportIssue": "Problem melden",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Suchen",
   "noSearchResults": "Keine Ergebnisse für »%s« gefunden",
-  "conversationsHeader": "Unterhaltungen",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontakte",
   "messagesHeader": "Nachrichten",
   "settingsHeader": "Einstellungen",
@@ -150,9 +149,9 @@
   "savedTheFile": "Medien gespeichert von $name$",
   "linkPreviewsTitle": "Link-Vorschauen Senden",
   "linkPreviewDescription": "Vorschau wird für die meisten URLs unterstützt",
-  "linkPreviewsConfirmMessage": "Beim Senden von Link-Vorschauen sind Ihre Metadaten nicht vollständig geschützt.",
+  "linkPreviewsConfirmMessage": "Beim Senden von Link-Vorschauen sind Metadaten nicht vollständig geschützt.",
   "mediaPermissionsTitle": "Mikrofon",
-  "mediaPermissionsDescription": "Erlaube Zugriff zum Mikrofon",
+  "mediaPermissionsDescription": "Erlaubt Zugriff auf das Mikrofon",
   "spellCheckTitle": "Rechtschreibprüfung",
   "spellCheckDescription": "Rechtschreibprüfung für im Nachrichteneingabefeld eingegebenen Text aktivieren",
   "spellCheckDirty": "Sie müssen Session neu starten, um die neuen Einstellungen zu übernehmen",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Nur der Ersteller der Gruppe kann Benutzer entfernen",
   "createAccount": "Konto Erstellen",
   "signIn": "Einloggen",
-  "startInTrayTitle": "Im Infobereich starten",
-  "startInTrayDescription": "Session als minimierten Anwendung starten ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Das ist Ihre Session ID.",
   "allUsersAreRandomly...": "Ihre Session ID ist die eindeutige Adresse, unter der Personen Sie über Session kontaktieren können. Ihre Session ID ist nicht mit Ihrer realen Identität verbunden, völlig anonym und von Natur aus privat.",
   "getStarted": "Loslegen",
@@ -415,25 +414,25 @@
   "unpinConversation": "Unterhaltung abnehmen",
   "pinConversationLimitTitle": "Limit für angeheftete Unterhaltungen",
   "pinConversationLimitToastDescription": "Du kannst höchstens $number$ Unterhaltungen anheften",
-  "showUserDetails": "Nutzer Details ansehen",
+  "showUserDetails": "Nutzerdetails ansehen",
   "latestUnreadIsAbove": "Erste ungelesene Nachricht ist oben",
   "sendRecoveryPhraseTitle": "Wiederherstellungsphrase zusenden",
   "sendRecoveryPhraseMessage": "Mit der Wiederherstellungsphrase kann auf deinen Account zugegriffen werden. Bist du dir sicher das du sie dir zusenden lassen möchtest?",
   "dialogClearAllDataDeletionFailedTitle": "Daten nicht gelöscht",
   "dialogClearAllDataDeletionFailedDesc": "Die Daten wurden aufgrund eines unbekannten Fehlers nicht gelöscht. Möchten Sie Ihre Daten nur von diesem Gerät löschen?",
   "dialogClearAllDataDeletionFailedTitleQuestion": "Möchten Sie Daten nur von diesem Gerät löschen?",
-  "dialogClearAllDataDeletionFailedMultiple": "Daten nicht gelöscht von Service Node. Service Node ID: $snodes$",
+  "dialogClearAllDataDeletionFailedMultiple": "Daten wurden von folgenden Dienstknoten nicht gelöscht: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Möchten Sie nur dieses Gerät entfernen, oder Ihr Konto vollständig löschen?",
   "deviceOnly": "Nur Gerät",
   "entireAccount": "Gesamtes Konto",
-  "areYouSureDeleteDeviceOnly": "Sind Sie sicher, dass Sie nur Ihre Gerätedaten löschen wollen?",
+  "areYouSureDeleteDeviceOnly": "Bist du sicher, dass du deine Gerätedaten löschen möchtest?",
   "areYouSureDeleteEntireAccount": "Sind Sie sicher, dass Sie Ihr gesamtes Konto, einschließlich der Daten im Netzwerk, löschen möchten?",
   "iAmSure": "Ich bin mir sicher",
   "recoveryPhraseSecureTitle": "Du bist fast fertig!",
-  "recoveryPhraseRevealMessage": "Sichern Sie Ihr Konto, indem Sie Ihre Wiederherstellungsphrase speichern. Zeigen Sie Ihre Wiederherstellungsphrase an und speichern Sie diese sicher.",
+  "recoveryPhraseRevealMessage": "Sichere dein Konto, indem du deine Wiederherstellungsphrase speicherst. Hier kannst du deine Wiederherstellungsphrase anzeigen lassen und anschließend sicher speichern.",
   "recoveryPhraseRevealButtonText": "Wiederherstellungsphrase anzeigen",
   "notificationSubtitle": "Benachrichtigungen - $setting$",
-  "surveyTitle": "Nimm unsere Session Umfrage an",
+  "surveyTitle": "Nimm an unserer Session-Umfrage teil",
   "goToOurSurvey": "Zur Umfrage",
   "blockAll": "Alle blockieren",
   "messageRequests": "Nachrichtenanfragen",
@@ -442,25 +441,28 @@
   "messageRequestsDescription": "Nachrichtanfragen aktivieren",
   "incomingCallFrom": "Eingehender Anruf von '$name$'",
   "ringing": "Klingelt...",
-  "establishingConnection": "Verbindungsaufbau...",
+  "establishingConnection": "Verbindungsaufbau ...",
   "accept": "Akzeptieren",
   "decline": "Ablehnen",
   "endCall": "Anruf beenden",
   "cameraPermissionNeededTitle": "Sprach-/Videoanruf-Berechtigungen erforderlich",
-  "cameraPermissionNeeded": "In den Datenschutzeinstellungen können Sie die Berechtigung \"Sprach- und Videoanrufe\" aktivieren.",
+  "cameraPermissionNeeded": "In den Datenschutzeinstellungen kannst du die Berechtigung \"Sprach- und Videoanrufe\" aktivieren.",
   "unableToCall": "Laufenden Anruf zuerst abbrechen",
   "unableToCallTitle": "Neuer Anruf konnte nicht gestartet werden",
-  "callMissed": "Entgangener Anruf von $name$",
-  "callMissedTitle": "Anruf verpasst",
+  "callMissed": "Verpasster Anruf von $name$",
+  "callMissedTitle": "Verpasster Anruf",
   "noCameraFound": "Keine Kamera gefunden",
   "noAudioInputFound": "Keine Audioeingabe gefunden",
   "noAudioOutputFound": "Keine Audioausgabe gefunden",
-  "callMediaPermissionsTitle": "Audio- und Videoanrufe",
-  "callMissedCausePermission": "Verpasster Anruf von '$name$', weil Sie die Berechtigung 'Anrufe und Videoanrufe' in den Datenschutzeinstellungen aktivieren müssen.",
-  "callMissedNotApproved": "Anruf von '$name$' fehlt, da Sie diese Unterhaltung noch nicht genehmigt haben. Senden Sie zuerst eine Nachricht an ihn.",
-  "callMediaPermissionsDescription": "Erlaube zugriff zu Sprach und Videoanrufe um Anrufe anzunehmen",
-  "callMediaPermissionsDialogContent": "Die aktuelle Implementierung von Voice/Video Anrufen wird Ihre IP-Adresse den Oxen Foundation Servern und dem Anruf/Anruf-Benutzer übergeben.",
+  "callMediaPermissionsTitle": "Sprach- und Videoanrufe",
+  "callMissedCausePermission": "Verpasster Anruf von '$name$', da du die Berechtigung 'Anrufe und Videoanrufe' in den Datenschutzeinstellungen aktivieren musst.",
+  "callMissedNotApproved": "Verpasster Anruf von '$name$', da du diese Unterhaltung noch nicht genehmigt hast. Sende dem Benutzer zuerst eine Nachricht.",
+  "callMediaPermissionsDescription": "Erlaubt es, Sprach- und Videoanrufe von anderen Benutzern anzunehmen",
+  "callMediaPermissionsDialogContent": "Die aktuelle Implementierung von Sprach- und Videoanrufen wird deine IP-Adresse den Oxen Foundation Servern und dem anderen Benutzer offenbaren.",
   "menuCall": "Anrufen",
   "startedACall": "Du hast $name$ angerufen",
-  "answeredACall": "Anruf mit $name$"
+  "answeredACall": "Anruf mit $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
