--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Vi estas forigita el la grupo.",
   "unreadMessage": "Nelegita Mesaĝo",
   "unreadMessages": "Unread Messages",
-  "debugLogExplanation": "Tiu protokolo estos afiŝita publike en la reto, por ke kontribuantoj vidu ĝin; vi povas revizii ĝin antaŭ ol sendi ĝin.",
-  "debugLogError": "Eraro dum la alŝuto! Bv. konsideri mane aldoni la protokolo, al problemo, kiun vi raportas.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Raporti problemon",
   "gotIt": "Mi komprenas!",
   "submit": "Sendi",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Serĉi",
   "noSearchResults": "Neniu rezulto pri „$searchTerm$“",
-  "conversationsHeader": "Interparoloj",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontaktaro",
   "messagesHeader": "Mesaĝoj",
   "settingsHeader": "Settings",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
