--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Has sido eliminado del grupo.",
   "unreadMessage": "Mensaje Sin Leer",
   "unreadMessages": "Mensajes Sin Leer",
-  "debugLogExplanation": "Este registro se publicará on line para que los colaboradores tengan acceso. Puedes examinarlo y editarlo antes de enviarlo.",
-  "debugLogError": "Se ha producido un fallo al adjuntar el archivo con el registro de depuración. Considera añadir el archivo manualmente al enviar el informe del fallo. ",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Informar de un problema",
   "gotIt": "Entendido",
   "submit": "Enviar",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Buscar",
   "noSearchResults": "No se encontraron resultados para «%s»",
-  "conversationsHeader": "Chats",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contactos",
   "messagesHeader": "Mensajes",
   "settingsHeader": "Ajustes",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Sólo el creador del grupo puede eliminar usuarios",
   "createAccount": "Create Account",
   "signIn": "Iniciar sesión",
-  "startInTrayTitle": "Iniciar en la bandeja del sistema",
-  "startInTrayDescription": "Iniciar Session como una aplicación minificada ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Saluda a tu ID de Session",
   "allUsersAreRandomly...": "Tu ID de Session es la dirección única que las personas pueden usar para contactarte en Session. Por diseño, tu ID de Session es totalmente anónima y privada, sin vínculo con tu identidad real.",
   "getStarted": "Comenzar",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "La implementación actual de llamadas de voz/video expondrá tu dirección IP a los servidores de Oxen Foundation y al usuario llamado.",
   "menuCall": "Llamar",
   "startedACall": "Has llamado a $name$",
-  "answeredACall": "Llamada con $name$"
+  "answeredACall": "Llamada con $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
