--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -19,8 +19,8 @@
   "editMenuPaste": "Liitä",
   "editMenuPasteAndMatchStyle": "Liitä ja sovita tyyliin",
   "editMenuDelete": "Poista",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Poista yhteystieto",
+  "editMenuDeleteGroup": "Poista ryhmä",
   "editMenuSelectAll": "Valitse kaikki",
   "windowMenuClose": "Sulje ikkuna",
   "windowMenuMinimize": "Pienennä",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Sinut on poistettu ryhmästä.",
   "unreadMessage": "Lukematon viesti",
   "unreadMessages": "Lukemattomat viestit",
-  "debugLogExplanation": "Tämä loki tullaan julkaisemaan verkossa, jotta kehittäjät ja muut voivat tarkastella sitä. Voit esikatsella ja muokata lokia vielä ennen kuin lähetät sen.",
-  "debugLogError": "Jokin meni pieleen lataamisessa! Ole hyvä ja liitä virheenkorjausloki vikailmoitukseesi.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Ilmoita ongelmasta",
   "gotIt": "Selvä!",
   "submit": "Lähetä",
@@ -75,7 +74,7 @@
   "attemptingReconnection": "Yritetään uudelleen $reconnect_duration_in_seconds$ sekunnin kuluttua",
   "submitDebugLog": "Virheenkorjausloki",
   "debugLog": "Virheenkorjausloki",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Näytä vianetsintäloki",
   "goToReleaseNotes": "Siirry julkaisutietoihin",
   "goToSupportPage": "Siirry tukisivulle",
   "menuReportIssue": "Ilmoita ongelmasta",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Hae",
   "noSearchResults": "Ei tuloksia haulle: \"$searchTerm$\"",
-  "conversationsHeader": "Keskustelut",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Yhteystiedot",
   "messagesHeader": "Viestit",
   "settingsHeader": "Asetukset",
@@ -113,13 +112,13 @@
   "error": "Virhe",
   "delete": "Poista",
   "messageDeletionForbidden": "Sinulla ei ole oikeutta poistaa toisten käyttäjien viestejä",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteJustForMe": "Poista vain minulta",
+  "deleteForEveryone": "Poista kaikilta",
+  "deleteMessagesQuestion": "Poistetaanko ne viestit?",
+  "deleteMessageQuestion": "Poistetaanko tämä viesti?",
   "deleteMessages": "Poista viestit",
   "deleted": "Poistettu",
-  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeletedPlaceholder": "Viesti on poistettu",
   "from": "Lähettäjä",
   "to": "vastaanottaja",
   "sent": "Lähetetty",
@@ -130,7 +129,7 @@
   "resend": "Uudelleenlähetä",
   "deleteConversationConfirmation": "Poistetaanko tämä keskustelu pysyvästi?",
   "clearAllData": "Poista kaikki data",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Tämä poistaa kaikki viestisi ja yhteystietosi pysyvästi.",
   "deleteContactConfirmation": "Oletko varma että haluat poistaa tämän keskustelun?",
   "quoteThumbnailAlt": "Lainatun kuvaviestin pikkukuva",
   "imageAttachmentAlt": "Viestiin liitetty kuva",
@@ -142,7 +141,7 @@
   "copySessionID": "Kopioi Session ID",
   "copyOpenGroupURL": "Kopioi ryhmän URL -osoite",
   "save": "Tallenna",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Tallenna loki työpöydälle",
   "saved": "Tallennettu",
   "permissions": "Käyttöoikeudet",
   "general": "Yleistä",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
