--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "თქვენ დაგატოვებინეს ჯგუფი.",
   "unreadMessage": "წაუკითხავი შეტყობინება",
   "unreadMessages": "წაუკითხავი შეტყობინება",
-  "debugLogExplanation": "ეს ლოგი საჯაროდ გამოქვეყნდება რათა კონტრიბუტორებს მისი ნახვის საშუალება მიეცეთ. თქვენ შეგიძლიათ გადახედოთ და ცვლილებები შეიტანოთ მასში გაგზავნამდე.",
-  "debugLogError": "ატვირთვის დროს დაფიქსირდა შეცდომა! გთხოვთ მიამაგროთ ლოგ ფაილი პრობლემის მოხსენებისას.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "პრობლემის მოხსენება",
   "gotIt": "გასაგებია",
   "submit": "გაგზავნა",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "ძიება",
   "noSearchResults": "\"$searchTerm$\" -ზე არაფერი მოიძებნა",
-  "conversationsHeader": "საუბრები",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "კონტაქტები",
   "messagesHeader": "შეტყობინებები",
   "settingsHeader": "პარამეტრები",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
