--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -46,7 +46,6 @@
   "unreadMessage": "읽지 않은 메시지",
   "unreadMessages": "읽지 않은 메시지",
   "debugLogExplanation": "This log will be saved to your desktop.",
-  "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "문제 보고",
   "gotIt": "Got it!",
   "submit": "제출",
@@ -85,7 +84,7 @@
   "sessionMessenger": "세션",
   "search": "검색",
   "noSearchResults": "No results for \"$searchTerm$\"",
-  "conversationsHeader": "대화",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "연락처",
   "messagesHeader": "메시지",
   "settingsHeader": "설정",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
