--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Du ble fjernet fra gruppen.",
   "unreadMessage": "Ulest melding",
   "unreadMessages": "Uleste meldinger",
-  "debugLogExplanation": "Denne loggen vil bli lagt ut offentlig på internett slik at bidragsytere kan se den. Du kan undersøke og redigere den før du sender den inn.",
-  "debugLogError": "Noe gikk galt med opplastingen! Vennligst vurder å manuelt legge loggen din til insektet du leverer inn.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Rapporter et problem",
   "gotIt": "Oppfattet",
   "submit": "Send inn",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Økt",
   "search": "Søk",
   "noSearchResults": "Ingen resultater funnet for «$searchTerm$»",
-  "conversationsHeader": "Samtaler",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontakter",
   "messagesHeader": "Beskjeder",
   "settingsHeader": "Innstillinger",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Kun skaperen av gruppen kan fjerne brukere",
   "createAccount": "Opprett konto",
   "signIn": "Logg på",
-  "startInTrayTitle": "Start i varslingsfeltet",
-  "startInTrayDescription": "Start Session som minimert applikasjon",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Si hei til din Session-ID",
   "allUsersAreRandomly...": "Din Session-ID er den unike adressen folk kan bruke for å kontakte deg på Session. Uten en forbindelse til din virkelige identitet er din Session-ID laget for å være fullstendig anonym og privat.",
   "getStarted": "Kom i gang",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
