--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -19,8 +19,8 @@
   "editMenuPaste": "Colar",
   "editMenuPasteAndMatchStyle": "Colar texto sem formatação",
   "editMenuDelete": "Excluir",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Excluir contato",
+  "editMenuDeleteGroup": "Excluir grupo",
   "editMenuSelectAll": "Selecionar Todas",
   "windowMenuClose": "Fechar janela",
   "windowMenuMinimize": "Minimizar",
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Você foi removida(o) do grupo.",
   "unreadMessage": "Mensagem não lida",
   "unreadMessages": "Mensagens não lidas",
-  "debugLogExplanation": "Esse registro será postado online publicamente para que colaboradores possam vê-lo. Antes de enviar, você pode verificá-lo e editá-lo.",
-  "debugLogError": "Algo deu errado no carregamento do registro! Por favor, considere adicioná-lo manualmente quando for relatar o problema.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Relatar um problema",
   "gotIt": "Entendi",
   "submit": "Enviar",
@@ -75,7 +74,7 @@
   "attemptingReconnection": "Tentando reconectar em $reconnect_duration_in_seconds$ segundos",
   "submitDebugLog": "Registro de depuração ",
   "debugLog": "Registro de depuração ",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Mostrar registro de depuração",
   "goToReleaseNotes": "Ir para Notas de Lançamento",
   "goToSupportPage": "Ir para Página de Suporte",
   "menuReportIssue": "Relatar um problema",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Procurar",
   "noSearchResults": "Nenhum resultado encontrado para \"$searchTerm$\"",
-  "conversationsHeader": "Conversas",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contatos",
   "messagesHeader": "Mensagens",
   "settingsHeader": "Configurações",
@@ -114,9 +113,9 @@
   "delete": "Excluir",
   "messageDeletionForbidden": "Você não tem permissão para excluír as mensagens de outros",
   "deleteJustForMe": "Excluir apenas para mim",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteForEveryone": "Excluir para todos",
+  "deleteMessagesQuestion": "Excluir mensagens?",
+  "deleteMessageQuestion": "Excluir esta mensagem?",
   "deleteMessages": "Apagar mensagens",
   "deleted": "Excluído",
   "messageDeletedPlaceholder": "Esta mensagem foi excluída",
@@ -142,7 +141,7 @@
   "copySessionID": "Copiar ID Session",
   "copyOpenGroupURL": "Copiar URL do grupo",
   "save": "Salvar",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Salvar log para o desktop",
   "saved": "Salvo",
   "permissions": "Permissões",
   "general": "Geral",
@@ -151,8 +150,8 @@
   "linkPreviewsTitle": "Enviar Pré-Visualizações De Links",
   "linkPreviewDescription": "Previews are supported for most urls.",
   "linkPreviewsConfirmMessage": "Você não terá proteção completa de metadados ao receber pré-visualização de links.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "Microfone",
+  "mediaPermissionsDescription": "Permita acesso ao microfone",
   "spellCheckTitle": "Corretor ortográfico",
   "spellCheckDescription": "Ativar a verificação ortográfica do texto digitado na caixa de edição de mensagens",
   "spellCheckDirty": "Você precisa reiniciar o Session para aplicar as novas configurações",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Somente o criador do grupo pode remover usuários",
   "createAccount": "Create Account",
   "signIn": "Iniciar sessão",
-  "startInTrayTitle": "Iniciar na Bandeja",
-  "startInTrayDescription": "Iniciar Session como um aplicativo minimizado ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Diga olá ao seu ID Session",
   "allUsersAreRandomly...": "Seu ID Session é o endereço exclusivo que as pessoas podem usar para entrar em contato com você no Session. Sem conexão com sua identidade real, seu ID Session é totalmente anônimo e privado por definição.",
   "getStarted": "Começar",
@@ -415,7 +414,7 @@
   "unpinConversation": "Desafixar conversa",
   "pinConversationLimitTitle": "Limite de conversas fixadas",
   "pinConversationLimitToastDescription": "Você só pode fixar $number$ conversas",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "Mostrar Detalhes do Usuário",
   "latestUnreadIsAbove": "A primeira mensagem não lida está acima",
   "sendRecoveryPhraseTitle": "Enviando frase de recuperação",
   "sendRecoveryPhraseMessage": "Tu estás tentando enviar a tua frase de recuperação qual pode ser utilizada para acessar a tua conta. Tu tens certeza de que queres enviar esta mensagem?",
@@ -435,32 +434,35 @@
   "notificationSubtitle": "Notificações - $setting$",
   "surveyTitle": "Responda à pesquisa do Session",
   "goToOurSurvey": "Acessar nossa pesquisa",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
+  "blockAll": "Bloquear Todos",
+  "messageRequests": "Pedidos de Mensagem",
+  "requestsSubtitle": "Solicitações Pendentes",
+  "requestsPlaceholder": "Nenhuma solicitação",
+  "messageRequestsDescription": "Ativar Caixa de Entrada de Requisição de Mensagem",
+  "incomingCallFrom": "Chamada recebida de '$name$'",
+  "ringing": "Chamando...",
+  "establishingConnection": "Conectando...",
   "accept": "Aceitar",
   "decline": "Rejeitar",
   "endCall": "Encerrando chamada",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Permissões necessárias para Chamada de voz/vídeo",
+  "cameraPermissionNeeded": "Você pode habilitar a permissão de 'Voz e vídeo' nas Configurações de Privacidade.",
+  "unableToCall": "Primeiro desligue sua chamada atual",
   "unableToCallTitle": "Não foi possível iniciar nova chamada",
   "callMissed": "Chamada perdida de $name$",
   "callMissedTitle": "Chamada perdida",
   "noCameraFound": "Nenhuma câmera encontrada",
   "noAudioInputFound": "Nenhuma entrada de áudio encontrada",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "noAudioOutputFound": "Nenhuma saída de áudio encontrada",
+  "callMediaPermissionsTitle": "Chamadas de voz e vídeo",
+  "callMissedCausePermission": "Chamada perdida de '$name$' porque você precisa habilitar a permissão 'Voz e vídeo' nas Configurações de Privacidade.",
+  "callMissedNotApproved": "Chamada perdida de '$name$' porque você ainda não aprovou esta conversa. Envie uma mensagem primeiro.",
+  "callMediaPermissionsDescription": "Permite o acesso a chamadas de voz e vídeo de outros usuários",
+  "callMediaPermissionsDialogContent": "A implementação atual das chamadas de voz/vídeo irá expor seu endereço IP aos servidores da Fundação Oxen e ao usuário chamado.",
+  "menuCall": "Ligar",
+  "startedACall": "Você ligou para $name$",
+  "answeredACall": "Chamar com $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
