--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "You were removed from the group.",
   "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
-  "debugLogExplanation": "Este relatório será publicado on-line para que os contribuidores o analisem. É possível examiná-lo e editá-lo antes de o submeter.",
-  "debugLogError": "Algo correu mal ao carregar! Por favor considere que adicionar um relatório de erros para o Erro que vai enviar.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Reportar um problema",
   "gotIt": "Ok!",
   "submit": "Submeter",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Procurar",
   "noSearchResults": "Sem resultados para \"$searchTerm$\"",
-  "conversationsHeader": "Conversas",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contactos",
   "messagesHeader": "Mensagens",
   "settingsHeader": "Settings",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Apenas o criador do grupo pode remover utilizadores",
   "createAccount": "Create Account",
   "signIn": "Entrar",
-  "startInTrayTitle": "Comece na bandeja",
-  "startInTrayDescription": "Iniciar sessão como um aplicativo reduzido ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
