--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "Ai fost scos din grup.",
   "unreadMessage": "Mesaj necitit",
   "unreadMessages": "Mesaje necitite",
-  "debugLogExplanation": "Acest log v-a fi publicat online pentru vizualizare de către contributori. Poţi sa-l examinezi şi să-l editezi înainte să fie publicat. ",
-  "debugLogError": "Ceva nu a mers bine cu încărcarea! Te rugăm să iei în considerare adăugarea manuală a jurnalului în fișierul tău.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Raportează o problemă",
   "gotIt": "Am înţeles!",
   "submit": "Trimite",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Sesiune",
   "search": "Căutați",
   "noSearchResults": "Nici un rezultat pentru \"$searchTerm$\"",
-  "conversationsHeader": "Conversații",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contacte",
   "messagesHeader": "Mesaje",
   "settingsHeader": "Setări",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Doar creatorul grupului poate elimina utilizatori",
   "createAccount": "Create Account",
   "signIn": "Conectare",
-  "startInTrayTitle": "Începe în panou",
-  "startInTrayDescription": "Începe sesiunea cu aplicația minimizată ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Salută-ți ID-ul tău de sesiune",
   "allUsersAreRandomly...": "ID-ul de sesiune este adresa ta unică pe care persoanele o pot folosi pentru a te contacta în sesiune. Fără nicio conexiune la identitatea ta reală, ID-ul sesiunii tale este complet anonim și privat prin design.",
   "getStarted": "Începe",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "Implementarea curentă a apelurilor vocale/video va expune adresa ta IP la serverele Fundației Oxen, precum și numele utilizatorului apelant si cel apelat.",
   "menuCall": "Apelează",
   "startedACall": "Ai sunat pe $name$",
-  "answeredACall": "Apel cu $name$"
+  "answeredACall": "Apel cu $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
