--- a/_locales/sq/messages.json
+++ b/_locales/sq/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "You were removed from the group.",
   "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
-  "debugLogExplanation": "Ky regjistër do të postohet publikisht në internet që ta shohin kontribuesit. Para se ta parashtroni, mund ta shqyrtoni dhe përpunoni.",
-  "debugLogError": "Diç shkoi ters me ngarkimin! Ju lutemi, shihni mundësinë e shtimit dorazi të regjistrit tuaj te e meta që po parashtroni.",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Raportoni një problem",
   "gotIt": "E mora vesh!",
   "submit": "Parashtrojeni",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "Kërko",
   "noSearchResults": "S’ka përfundime për \"$searchTerm$\"",
-  "conversationsHeader": "Biseda.",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontakte",
   "messagesHeader": "Mesazhe",
   "settingsHeader": "Settings",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
