--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -45,8 +45,7 @@
   "youGotKickedFromGroup": "您已從群組中移除",
   "unreadMessage": "未讀訊息",
   "unreadMessages": "未讀訊息",
-  "debugLogExplanation": "這個紀錄將被公開張貼在線上給貢獻者瀏覽。在送出前，你可以檢視及修改。",
-  "debugLogError": "上傳出問題目! 請考慮手動加入活動記錄檔來查錯",
+  "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "回報問題",
   "gotIt": "了解！",
   "submit": "送出",
@@ -85,7 +84,7 @@
   "sessionMessenger": "Session",
   "search": "搜尋",
   "noSearchResults": "無 \"$searchTerm$\" 的搜尋結果",
-  "conversationsHeader": "對話",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "聯絡人",
   "messagesHeader": "訊息",
   "settingsHeader": "設定",
@@ -335,8 +334,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Keep in System Tray",
+  "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -462,5 +461,8 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "answeredACall": "Call with $name$",
+  "trimDatabase": "Trim Database",
+  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
 }
